--- a/directbak.yaml
+++ b/directbak.yaml
@@ -7179,7 +7179,6 @@ payload:
   - '+.9man.com'
   - '+.9mayi.com'
   - '+.9mbv.com'
-  - '+.9mi.me'
   - '+.9miao.com'
   - '+.9miaoxueyuan.com'
   - '+.9mic.com'
@@ -7473,7 +7472,6 @@ payload:
   - '+.ad-cn.net'
   - '+.ad-gone.com'
   - '+.ad-goods.com'
-  - '+.ad-mex.com'
   - '+.ad-safe.com'
   - '+.ad-survey.com'
   - '+.ad-young.com'
@@ -7541,6 +7539,7 @@ payload:
   - '+.admama.com'
   - '+.admamax.com'
   - '+.admasterto.com'
+  - '+.admile.xyz'
   - '+.admin.edu.pl'
   - '+.admin10000.com'
   - '+.admin168.net'
@@ -12140,7 +12139,6 @@ payload:
   - '+.bxwst.com'
   - '+.bxwx.la'
   - '+.bxwx.tv'
-  - '+.bxwx.us'
   - '+.bxwx520.com'
   - '+.bxxy.com'
   - '+.bxyuer.com'
@@ -20454,7 +20452,6 @@ payload:
   - '+.eff-soft.com'
   - '+.effapp.com'
   - '+.effecthub.com'
-  - '+.effevo.com'
   - '+.efficient.hk'
   - '+.effirst.com'
   - '+.efivestar.com'
@@ -22069,7 +22066,6 @@ payload:
   - '+.ffxiv.co'
   - '+.ffxiv.tk'
   - '+.ffxiv.xin'
-  - '+.ffyd8.com'
   - '+.ffyinxiang.com'
   - '+.fg.cc'
   - '+.fgeekcloud.com'
@@ -24444,7 +24440,6 @@ payload:
   - '+.gridsum.com'
   - '+.gridsumdissector.com'
   - '+.gridy.com'
-  - '+.grieom.com'
   - '+.grikin.com'
   - '+.grinm.com'
   - '+.grirem.com'
@@ -27782,7 +27777,6 @@ payload:
   - '+.huaban.com'
   - '+.huabanimg.com'
   - '+.huabanpro.com'
-  - '+.huabei369.com'
   - '+.huabeipay.com'
   - '+.huabian.com'
   - '+.huabo.net'
@@ -31058,7 +31052,6 @@ payload:
   - '+.jcmtxs.com'
   - '+.jcnano.com'
   - '+.jcnk120.com'
-  - '+.jcoal.com'
   - '+.jcodecraeer.com'
   - '+.jcpeixun.com'
   - '+.jcqczb.com'
@@ -32138,6 +32131,7 @@ payload:
   - '+.jiweichengzhu.com'
   - '+.jiwu.com'
   - '+.jiwudai.com'
+  - '+.jixia.ink'
   - '+.jixiangbaiwei.com'
   - '+.jixiangjili.com'
   - '+.jixiangna.com'
@@ -32320,7 +32314,6 @@ payload:
   - '+.jlwlyx.com'
   - '+.jlwubi.com'
   - '+.jlxfw.com'
-  - '+.jlytjx.com'
   - '+.jlzkb.com'
   - '+.jlzsoft.com'
   - '+.jlzyz.com'
@@ -40708,6 +40701,7 @@ payload:
   - '+.niuqia.com'
   - '+.niuschools.com'
   - '+.niushe.com'
+  - '+.niutk.com'
   - '+.niutoushe.com'
   - '+.niutrans.com'
   - '+.niutrip.com'
@@ -40898,6 +40892,7 @@ payload:
   - '+.nolovr.com'
   - '+.nomax.vip'
   - '+.nome.com'
+  - '+.nonat.co'
   - '+.nonganxian.com'
   - '+.nongcun5.com'
   - '+.nongfen.com'
@@ -42295,7 +42290,6 @@ payload:
   - '+.pcwenti.com'
   - '+.pcwl.com'
   - '+.pcyangguangban.com'
-  - '+.pczhuji.com'
   - '+.pd-sts.com'
   - '+.pd120.com'
   - '+.pd17.com'
@@ -47963,6 +47957,7 @@ payload:
   - '+.shuqistat.com'
   - '+.shuquge.com'
   - '+.shuqun.com'
+  - '+.shuquta.com'
   - '+.shuqw.com'
   - '+.shuren100.com'
   - '+.shurenbang.net'
@@ -48926,7 +48921,6 @@ payload:
   - '+.songjiayang.com'
   - '+.songker.com'
   - '+.songlei.net'
-  - '+.songluhome.com'
   - '+.songqili.net'
   - '+.songqinedu.com'
   - '+.songqinnet.com'
@@ -50709,7 +50703,6 @@ payload:
   - '+.taohuizhou.com'
   - '+.taohuochang.com'
   - '+.taohuren.com'
-  - '+.taohwu.com'
   - '+.taoibao.net'
   - '+.taojiji.com'
   - '+.taojin6.com'
@@ -51762,7 +51755,6 @@ payload:
   - '+.tmhong.com'
   - '+.tmhvps.com'
   - '+.tmiep.org'
-  - '+.tmigoods.com'
   - '+.tmisp.com'
   - '+.tmjob88.com'
   - '+.tmjypx.com'
@@ -52675,6 +52667,7 @@ payload:
   - '+.tuwenla.com'
   - '+.tuwenzhibo.com'
   - '+.tux.red'
+  - '+.tuxi.com'
   - '+.tuxiaobei.com'
   - '+.tuxiu.com'
   - '+.tuya.com'
@@ -54704,6 +54697,7 @@ payload:
   - '+.wantong-tech.net'
   - '+.wantouzi.net'
   - '+.wantowan.com'
+  - '+.wantquotes.net'
   - '+.wantrack-nj.com'
   - '+.wantshopping.ltd'
   - '+.wantumusic.com'
@@ -56039,7 +56033,6 @@ payload:
   - '+.withsccdn.com'
   - '+.withubit.org'
   - '+.withzz.com'
-  - '+.witkey.com'
   - '+.witmart.net'
   - '+.witnew.net'
   - '+.witontek.com'
@@ -56506,7 +56499,6 @@ payload:
   - '+.wqcms.com'
   - '+.wqdian.com'
   - '+.wqdian.net'
-  - '+.wqetrip.com'
   - '+.wqgp.com'
   - '+.wqhunqing.com'
   - '+.wqiis.com'
@@ -58757,6 +58749,7 @@ payload:
   - '+.xlm33.com'
   - '+.xlobo.com'
   - '+.xlpan.com'
+  - '+.xlqzh.com'
   - '+.xlrocket.com'
   - '+.xlsemi.com'
   - '+.xlshou.com'
@@ -62741,7 +62734,6 @@ payload:
   - '+.zcmorefun.com'
   - '+.zcoa365.com'
   - '+.zcobrand.com'
-  - '+.zcodc.com'
   - '+.zcom.com'
   - '+.zcoming.com'
   - '+.zcooler.com'
