--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1737,7 +1737,6 @@ payload:
   - '+.18link.com'
   - '+.18ph.com'
   - '+.18qiang.com'
-  - '+.18shuwu.net'
   - '+.18touch.com'
   - '+.18vps.com'
   - '+.18wk.com'
@@ -3763,7 +3762,6 @@ payload:
   - '+.517tez.com'
   - '+.517w.com'
   - '+.517xc.com'
-  - '+.517zp.com'
   - '+.5184.com'
   - '+.51845.com'
   - '+.5184edu.com'
@@ -6249,7 +6247,6 @@ payload:
   - '+.88360.com'
   - '+.8838sl.com'
   - '+.884109.com'
-  - '+.884134.com'
   - '+.884358.com'
   - '+.8844.com'
   - '+.88444l.cc'
@@ -8786,6 +8783,7 @@ payload:
   - '+.anyuantec.com'
   - '+.anyunjianzhan.com'
   - '+.anyv.net'
+  - '+.anyview.net'
   - '+.anyway.fm'
   - '+.anywlan.com'
   - '+.anywood.com'
@@ -10199,6 +10197,7 @@ payload:
   - '+.bbbbbb.me'
   - '+.bbbtgo.com'
   - '+.bbbvip.com'
+  - '+.bbchin.com'
   - '+.bbcss.com'
   - '+.bbctop.com'
   - '+.bbcyw.com'
@@ -18510,6 +18509,8 @@ payload:
   - '+.dierkezhan.com'
   - '+.diershoubing.com'
   - '+.dietfd.com'
+  - '+.diezhan.me'
+  - '+.diezhan6.com'
   - '+.difanapp.com'
   - '+.difangfengsu.com'
   - '+.dig-gy.com'
@@ -21098,6 +21099,7 @@ payload:
   - '+.eve.moe'
   - '+.eventdove.com'
   - '+.events2.djicdn.com'
+  - '+.everbaas.com'
   - '+.everdns.com'
   - '+.evereasycom.com'
   - '+.everedit.net'
@@ -21379,7 +21381,6 @@ payload:
   - '+.face2ai.com'
   - '+.faceboer.com'
   - '+.facecloud.net'
-  - '+.faceh5.com'
   - '+.facehufu.com'
   - '+.faceid.com'
   - '+.faceminiproject.online'
@@ -24707,7 +24708,6 @@ payload:
   - '+.guifun.com'
   - '+.guigu.org'
   - '+.guiguzhongguo.com'
-  - '+.guiheyue.com'
   - '+.guihua.com'
   - '+.guihuayun.com'
   - '+.guiji.com'
@@ -31794,6 +31794,7 @@ payload:
   - '+.jingguan.ai'
   - '+.jinghaishop.com'
   - '+.jinghangapps.com'
+  - '+.jinghooo.com'
   - '+.jinghua.com'
   - '+.jinghujiaoyu.com'
   - '+.jingjia.org'
@@ -45158,7 +45159,6 @@ payload:
   - '+.rbcty.com'
   - '+.rbischina.org'
   - '+.rbqq.com'
-  - '+.rbyair.com'
   - '+.rbz1672.com'
   - '+.rbzygs.com'
   - '+.rc114.com'
@@ -53416,7 +53416,6 @@ payload:
   - '+.uqee.com'
   - '+.uqeegame.com'
   - '+.uqer.io'
-  - '+.uqi.me'
   - '+.uqidong.com'
   - '+.uqidong.net'
   - '+.uqite.com'
@@ -55446,6 +55445,7 @@ payload:
   - '+.wetvinfo.com'
   - '+.wewean.com'
   - '+.wewinpe.com'
+  - '+.weworkcloudesk.com'
   - '+.wex5.com'
   - '+.wexin.com'
   - '+.wey.com'
@@ -57193,6 +57193,7 @@ payload:
   - '+.xazzp.com'
   - '+.xazzs.com'
   - '+.xb100.net'
+  - '+.xb21cn.com'
   - '+.xb2s.com'
   - '+.xb5.cc'
   - '+.xbaofun.com'
