--- a/AppleCN.yaml
+++ b/AppleCN.yaml
@@ -110,6 +110,7 @@ payload:
   - '+.store.storeimages.cdn-apple.com'
   - '+.support-china.apple-support.akadns.net'
   - '+.support.apple.com'
+  - '+.swallow.apple.com'
   - '+.swcatalog-cdn.apple.com.akadns.net'
   - '+.swcatalog.apple.com'
   - '+.swcdn.apple.com'
