--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2675,7 +2675,6 @@ payload:
   - '+.33105.com'
   - '+.331234.xyz'
   - '+.3312345.com'
-  - '+.331ka.com'
   - '+.3320.net'
   - '+.3321.com'
   - '+.3322.cc'
@@ -3360,7 +3359,6 @@ payload:
   - '+.400.com'
   - '+.4000278400.com'
   - '+.4000500521.com'
-  - '+.4000690600.com'
   - '+.4000730138.com'
   - '+.4000892990.com'
   - '+.4001006.com'
@@ -4094,7 +4092,6 @@ payload:
   - '+.51qub.com'
   - '+.51qudao888.com'
   - '+.51qudong.net'
-  - '+.51qufx.com'
   - '+.51qumi.com'
   - '+.51qupu.com'
   - '+.51quzhe.com'
@@ -4427,7 +4424,6 @@ payload:
   - '+.52fuqu.com'
   - '+.52game.org'
   - '+.52gg.com'
-  - '+.52ghai.com'
   - '+.52gougouwang.com'
   - '+.52grz.com'
   - '+.52guixi.com'
@@ -6246,7 +6242,6 @@ payload:
   - '+.88303887.com'
   - '+.88360.com'
   - '+.8838sl.com'
-  - '+.884109.com'
   - '+.884358.com'
   - '+.8844.com'
   - '+.88444l.cc'
@@ -6393,7 +6388,6 @@ payload:
   - '+.8qwx.com'
   - '+.8s123.com'
   - '+.8she.com'
-  - '+.8taobaodian.com'
   - '+.8tgh.com'
   - '+.8ttt8.com'
   - '+.8tupian.com'
@@ -7276,7 +7270,6 @@ payload:
   - '+.aa7.org'
   - '+.aa8828.com'
   - '+.aaahsxb.com'
-  - '+.aaal.cc'
   - '+.aaapeixun.com'
   - '+.aaayun.com'
   - '+.aadongman.com'
@@ -11199,7 +11192,6 @@ payload:
   - '+.bjgemi.com'
   - '+.bjggk.com'
   - '+.bjglxf.com'
-  - '+.bjgnjdwx.com'
   - '+.bjgongteng.com'
   - '+.bjgujibaohu.com'
   - '+.bjgwy.org'
@@ -13622,7 +13614,6 @@ payload:
   - '+.chaojifangyu.com'
   - '+.chaojihetong.com'
   - '+.chaojilian.net'
-  - '+.chaojilock.com'
   - '+.chaojishipin.com'
   - '+.chaojixiaobaicai.club'
   - '+.chaojiying.com'
@@ -15078,7 +15069,6 @@ payload:
   - '+.citreport.com'
   - '+.cits-sz.net'
   - '+.cits0871.com'
-  - '+.cits2.com'
   - '+.citscq.com'
   - '+.citscsc.com'
   - '+.citsgbt.com'
@@ -18893,6 +18883,7 @@ payload:
   - '+.dns110.com'
   - '+.dns123.net'
   - '+.dns12345.com'
+  - '+.dns200.net'
   - '+.dns2008.com'
   - '+.dns383.com'
   - '+.dns567.com'
@@ -20332,7 +20323,6 @@ payload:
   - '+.edu-job.org'
   - '+.edu-nw.com'
   - '+.edu-shanghai.net'
-  - '+.edu.com'
   - '+.edu03.com'
   - '+.edu0851.com'
   - '+.edu201.com'
@@ -23098,7 +23088,6 @@ payload:
   - '+.galaxymacau.com'
   - '+.galaxyns.net'
   - '+.galeo.me'
-  - '+.galgamezs.com'
   - '+.gallopgazelle.com'
   - '+.galstars.net'
   - '+.galsun.com'
@@ -23619,6 +23608,7 @@ payload:
   - '+.genshuixue.com'
   - '+.gentags.com'
   - '+.gentags.net'
+  - '+.genuway.com'
   - '+.genymotion.net'
   - '+.genzhuang.org'
   - '+.geo-prism-cn.htcsense.com'
@@ -24147,6 +24137,7 @@ payload:
   - '+.gomehome.com'
   - '+.gomeplus.com'
   - '+.gomo.com'
+  - '+.gonb.org'
   - '+.gonever.com'
   - '+.gong123.com'
   - '+.gongbaike.com'
@@ -24956,6 +24947,7 @@ payload:
   - '+.gxqcw.com'
   - '+.gxqs.org'
   - '+.gxrc.com'
+  - '+.gxrkyy.com'
   - '+.gxsell.com'
   - '+.gxshuairun.com'
   - '+.gxskm.com'
@@ -25560,7 +25552,6 @@ payload:
   - '+.hannor.com'
   - '+.hanqiweb.com'
   - '+.hanqiweb.net'
-  - '+.hanqiweb.red'
   - '+.hanshijiaoye.com'
   - '+.hanshow.com'
   - '+.hanshuliang.com'
@@ -28650,7 +28641,6 @@ payload:
   - '+.hyxrzs.com'
   - '+.hyyf.net'
   - '+.hyyoa.com'
-  - '+.hyz86.com'
   - '+.hyzcservice.com'
   - '+.hyzm.cc'
   - '+.hyznjs.com'
@@ -29757,7 +29747,6 @@ payload:
   - '+.imagefz.com'
   - '+.imagehub.cc'
   - '+.imagelol.com'
-  - '+.imageoss.com'
   - '+.imagepy.org'
   - '+.images-cache.com'
   - '+.images.benchmarkemail.com'
@@ -30113,7 +30102,6 @@ payload:
   - '+.internetworld.cloud'
   - '+.intertid.com'
   - '+.interval.im'
-  - '+.intiea.org'
   - '+.intio.org'
   - '+.intl-hzc.com'
   - '+.intlgame.com'
@@ -31302,7 +31290,6 @@ payload:
   - '+.jht868.com'
   - '+.jhtcgroup.com'
   - '+.jhwaimai.com'
-  - '+.jhwl444.com'
   - '+.jhwrsq.com'
   - '+.jhxms.com'
   - '+.jhyongyou.com'
@@ -31963,7 +31950,6 @@ payload:
   - '+.jinyongwang.com'
   - '+.jinyoukai.com'
   - '+.jinyueya.com'
-  - '+.jinyunfood.com'
   - '+.jinyunweb.com'
   - '+.jinyuzd.cc'
   - '+.jinzheled.com'
@@ -32638,7 +32624,6 @@ payload:
   - '+.js178.com'
   - '+.js3.org'
   - '+.js3n.com'
-  - '+.js53777.com'
   - '+.js7xc.com'
   - '+.js8.in'
   - '+.js811.com'
@@ -34798,6 +34783,7 @@ payload:
   - '+.kyzyj.com'
   - '+.kz8yx.com'
   - '+.kza.cc'
+  - '+.kzecc.com'
   - '+.kzore.com'
   - '+.kzt.cc'
   - '+.kztpms.com'
@@ -37348,7 +37334,6 @@ payload:
   - '+.lyric-robot.com'
   - '+.lyricsv.app'
   - '+.lysk.net'
-  - '+.lysqdx.com'
   - '+.lysqzs.com'
   - '+.lysteel.com'
   - '+.lysy360.com'
@@ -38275,7 +38260,6 @@ payload:
   - '+.meitu.store'
   - '+.meituan.com'
   - '+.meituan.net'
-  - '+.meituba.com'
   - '+.meitubase.com'
   - '+.meitudata.com'
   - '+.meitumobile.com'
@@ -39625,6 +39609,7 @@ payload:
   - '+.mufengyue.com'
   - '+.muftc.com'
   - '+.mugeda.com'
+  - '+.mugedokn.cyou'
   - '+.muhai.net'
   - '+.muhoujiemi.com'
   - '+.muimg.com'
@@ -40887,6 +40872,7 @@ payload:
   - '+.noeic.com'
   - '+.nohken-sdy.com'
   - '+.nohup.cc'
+  - '+.noizztv.com'
   - '+.nokia-sbell.com'
   - '+.nokia88.com'
   - '+.nolanchou.com'
@@ -43050,7 +43036,6 @@ payload:
   - '+.potplayer.org'
   - '+.potplayercn.com'
   - '+.pouchcontainer.io'
-  - '+.poukao.com'
   - '+.poweizu.com'
   - '+.power-bd.com'
   - '+.power-sensor.com'
@@ -45034,7 +45019,6 @@ payload:
   - '+.qzxx.com'
   - '+.qzyb.com'
   - '+.qzyxzs.com'
-  - '+.qzyygk.com'
   - '+.qzze.com'
   - '+.qzzn.com'
   - '+.qzzres.com'
@@ -45570,6 +45554,7 @@ payload:
   - '+.rkdatabase.com'
   - '+.rkeji.com'
   - '+.rkgaming.com'
+  - '+.rkkgyy.com'
   - '+.rkmikn.xyz'
   - '+.rksec.com'
   - '+.rkvir.com'
@@ -46662,7 +46647,6 @@ payload:
   - '+.sed3.com'
   - '+.see-far.com'
   - '+.see-source.com'
-  - '+.seea.red'
   - '+.seeb.red'
   - '+.seebug.org'
   - '+.seebyleegee.com'
@@ -48469,6 +48453,7 @@ payload:
   - '+.skongmx.com'
   - '+.skrshop.tech'
   - '+.sksdwl.com'
+  - '+.sktfaker.com'
   - '+.skusoft.com'
   - '+.skwo.net'
   - '+.sky-deep.com'
@@ -48494,7 +48479,6 @@ payload:
   - '+.skygho.com'
   - '+.skyheng.com'
   - '+.skyju.cc'
-  - '+.skykeyjoker.com'
   - '+.skylerzhang.com'
   - '+.skyliteapi.com'
   - '+.skylook.org'
@@ -48778,6 +48762,7 @@ payload:
   - '+.socang.com'
   - '+.socansoft.com'
   - '+.socay.com'
+  - '+.soccerbar.cc'
   - '+.socchina.net'
   - '+.sochengyi.com'
   - '+.sochips.com'
@@ -49890,6 +49875,7 @@ payload:
   - '+.swaqds.com'
   - '+.swarma.net'
   - '+.swarma.org'
+  - '+.swarmcloud.net'
   - '+.swatou.com'
   - '+.swbbsc.com'
   - '+.swchina.org'
@@ -50887,7 +50873,6 @@ payload:
   - '+.tcsnake.com'
   - '+.tcstudents.com'
   - '+.tcstzg.com'
-  - '+.tctd.net'
   - '+.tctip.com'
   - '+.tctong.com'
   - '+.tcxw.cc'
@@ -51356,7 +51341,6 @@ payload:
   - '+.tiannv.com'
   - '+.tianpeng.com'
   - '+.tianpinjie.com'
-  - '+.tianpujun.com'
   - '+.tianqi.cc'
   - '+.tianqi.com'
   - '+.tianqi123.com'
@@ -51472,7 +51456,6 @@ payload:
   - '+.ticp.net'
   - '+.ticstore.com'
   - '+.ticwear.com'
-  - '+.tida120.com'
   - '+.tidb.io'
   - '+.tideswing.fun'
   - '+.tidi.mobi'
@@ -52215,7 +52198,6 @@ payload:
   - '+.triphr.com'
   - '+.triplexservice.com'
   - '+.tripsanxia.net'
-  - '+.tripsmc.com'
   - '+.tripurx.com'
   - '+.tripvivid.com'
   - '+.tripwirechina.com'
@@ -53607,6 +53589,7 @@ payload:
   - '+.ux98.com'
   - '+.uxacn.com'
   - '+.uxdc.net'
+  - '+.uxiangzu.com'
   - '+.uxianhu.com'
   - '+.uxicp.com'
   - '+.uxigo.com'
@@ -54365,6 +54348,7 @@ payload:
   - '+.w3cbus.com'
   - '+.w3cfuns.com'
   - '+.w3chtml.com'
+  - '+.w3cjava.com'
   - '+.w3cplus.com'
   - '+.w3cschool.cc'
   - '+.w3cshare.com'
@@ -55814,7 +55798,6 @@ payload:
   - '+.whzhzxmr.com'
   - '+.whzjyy.com'
   - '+.whzkb.com'
-  - '+.whzlyy.com'
   - '+.whzph.com'
   - '+.whzsrc.com'
   - '+.whzwzk.com'
@@ -56756,7 +56739,6 @@ payload:
   - '+.wuqishike.com'
   - '+.wurenjifanzhi.com'
   - '+.wuruihong.com'
-  - '+.wuruo8.com'
   - '+.wuscn.com'
   - '+.wuse.com'
   - '+.wusen.net'
@@ -57331,7 +57313,6 @@ payload:
   - '+.xddhy.com'
   - '+.xddpay.com'
   - '+.xddxs.cc'
-  - '+.xddxx102.com'
   - '+.xde.com'
   - '+.xde6.net'
   - '+.xdfckjz.com'
@@ -57604,6 +57585,7 @@ payload:
   - '+.xianghui8.com'
   - '+.xianghunet.com'
   - '+.xianghus.com'
+  - '+.xiangkanwang.com'
   - '+.xiangkanzs.com'
   - '+.xiangkesi.com'
   - '+.xiangley.com'
@@ -58593,7 +58575,6 @@ payload:
   - '+.xixin123.com'
   - '+.xixipan.com'
   - '+.xixiqipai.com'
-  - '+.xixiqiu.com'
   - '+.xixisys.com'
   - '+.xixiwg.com'
   - '+.xiyacs.com'
@@ -61687,6 +61668,7 @@ payload:
   - '+.ytdfcw.com'
   - '+.ytdsdz.com'
   - '+.yte1.com'
+  - '+.yteng.net'
   - '+.ytesting.com'
   - '+.ytet.org'
   - '+.ytfuzhen.com'
@@ -61711,7 +61693,6 @@ payload:
   - '+.ytud.net'
   - '+.ytxedu.com'
   - '+.ytxsc.com'
-  - '+.ytxun.com'
   - '+.ytyug.com'
   - '+.ytzhihui.com'
   - '+.ytzq.com'
@@ -62672,6 +62653,7 @@ payload:
   - '+.zbhouse.com'
   - '+.zbintel.com'
   - '+.zbird.com'
+  - '+.zbisq.com'
   - '+.zbj.com'
   - '+.zbjdev.com'
   - '+.zbjdr.com'
@@ -63907,6 +63889,7 @@ payload:
   - '+.zhugeapi.net'
   - '+.zhugefang.com'
   - '+.zhugeio.com'
+  - '+.zhuhaihaofang.com'
   - '+.zhuhaily.com'
   - '+.zhuhaimy.com'
   - '+.zhuhd.win'
