--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1792,7 +1792,6 @@ payload:
   - '+.199zw.com'
   - '+.19kan.com'
   - '+.19lou.com'
-  - '+.19lou.tw'
   - '+.19mi.net'
   - '+.19ued.com'
   - '+.19where.com'
@@ -2053,7 +2052,6 @@ payload:
   - '+.21cnimg.com'
   - '+.21cnjy.com'
   - '+.21cnjy.net'
-  - '+.21cnlunwen.com'
   - '+.21cos.com'
   - '+.21cp.cc'
   - '+.21cp.com'
@@ -2229,7 +2227,6 @@ payload:
   - '+.236400.com'
   - '+.236501.xyz'
   - '+.2366.com'
-  - '+.2366app.com'
   - '+.23673.com'
   - '+.236z.com'
   - '+.237y.com'
@@ -2326,7 +2323,6 @@ payload:
   - '+.25dx.com'
   - '+.25game.com'
   - '+.25ku.com'
-  - '+.25mao.com'
   - '+.25nc.com'
   - '+.25pp.com'
   - '+.25pyg.com'
@@ -2661,6 +2657,7 @@ payload:
   - '+.324.com'
   - '+.3259.com'
   - '+.32800.com'
+  - '+.328888.xyz'
   - '+.328f.com'
   - '+.328vip.com'
   - '+.32bh.com'
@@ -4034,7 +4031,6 @@ payload:
   - '+.51miz.com'
   - '+.51mkf.com'
   - '+.51mockup.com'
-  - '+.51modo.cc'
   - '+.51mokao.com'
   - '+.51mole.com'
   - '+.51moot.net'
@@ -6641,7 +6637,6 @@ payload:
   - '+.91xueshu.com'
   - '+.91xunyou.com'
   - '+.91xy.com'
-  - '+.91xzba.com'
   - '+.91y.com'
   - '+.91yao.com'
   - '+.91yinpin.com'
@@ -6701,7 +6696,6 @@ payload:
   - '+.92python.com'
   - '+.92sucai.com'
   - '+.92tianjin.com'
-  - '+.92to.com'
   - '+.92u93e.com'
   - '+.92wan.com'
   - '+.92wenzhai.com'
@@ -11855,7 +11849,6 @@ payload:
   - '+.bruce.wang'
   - '+.bruceit.com'
   - '+.brunoxu.com'
-  - '+.brushes8.com'
   - '+.bryonypie.com'
   - '+.brzhang.club'
   - '+.bs-dolfin.net'
@@ -12765,6 +12758,7 @@ payload:
   - '+.cccitu.com'
   - '+.cccity.cc'
   - '+.ccciw.com'
+  - '+.cccmat.com'
   - '+.cccnec.com'
   - '+.cccollector.com'
   - '+.cccpan.com'
@@ -13391,7 +13385,6 @@ payload:
   - '+.cfxyfsyy.com'
   - '+.cfxyjy.com'
   - '+.cfzq.com'
-  - '+.cg-cdn.net'
   - '+.cg-orz.com'
   - '+.cg-vipwebs.com'
   - '+.cg-zwdb.com'
@@ -16523,7 +16516,6 @@ payload:
   - '+.cqmama.net'
   - '+.cqmas.com'
   - '+.cqmcu.com'
-  - '+.cqmj.org'
   - '+.cqmjkjzx.com'
   - '+.cqmmgo.com'
   - '+.cqmw.com'
@@ -16878,7 +16870,6 @@ payload:
   - '+.ctcnn.com'
   - '+.ctcnpa.com'
   - '+.ctcwri.org'
-  - '+.ctdc-itshare.org'
   - '+.ctdcn.com'
   - '+.ctdisk.com'
   - '+.ctdns.net'
@@ -17872,7 +17863,6 @@ payload:
   - '+.dcsme.org'
   - '+.dcv.so'
   - '+.dcxnews.com'
-  - '+.dczou.com'
   - '+.dd-advisor.com'
   - '+.dd-gz.com'
   - '+.dd-img.com'
@@ -18449,7 +18439,6 @@ payload:
   - '+.diaoyula.com'
   - '+.diaoyuren.com'
   - '+.diaoyuwang.com'
-  - '+.diaoyuweng.com'
   - '+.diaoyuwo.com'
   - '+.diary365.net'
   - '+.diaxue.com'
@@ -18726,7 +18715,6 @@ payload:
   - '+.djyyh.com'
   - '+.djzbl.com'
   - '+.djzhj.com'
-  - '+.djzhx.com'
   - '+.djzr88.com'
   - '+.dkdangle.com'
   - '+.dkjiaoyang.com'
@@ -19491,6 +19479,7 @@ payload:
   - '+.duantian.com'
   - '+.duanwenxue.com'
   - '+.duanwxue.com'
+  - '+.duanxb.com'
   - '+.duanxin321.com'
   - '+.duanxin520.com'
   - '+.duanyoutv.vip'
@@ -27330,6 +27319,7 @@ payload:
   - '+.hongqipress.com'
   - '+.hongrenzhuang.site'
   - '+.hongru.com'
+  - '+.hongruike.com'
   - '+.hongsat.com'
   - '+.hongsehuoxian.com'
   - '+.hongsejiqing.com'
@@ -31661,7 +31651,6 @@ payload:
   - '+.jigao616.com'
   - '+.jiguangdaili.com'
   - '+.jiguangdanci.com'
-  - '+.jiguangkejigongsi.com'
   - '+.jiguo.com'
   - '+.jihai8.com'
   - '+.jihaoba.com'
@@ -31702,6 +31691,7 @@ payload:
   - '+.jilinpujiyiyuan.com'
   - '+.jilinwula.com'
   - '+.jiliyun.com'
+  - '+.jimeisilk.com'
   - '+.jimeng.mobi'
   - '+.jimi168.com'
   - '+.jimicn.com'
@@ -33911,7 +33901,6 @@ payload:
   - '+.kimqi.net'
   - '+.kimsom.com'
   - '+.kina.cc'
-  - '+.kinboy.wang'
   - '+.kindeditor.net'
   - '+.kindle-china.org'
   - '+.kindle114.com'
@@ -34244,7 +34233,6 @@ payload:
   - '+.koovoo.com'
   - '+.koowo.com'
   - '+.kooxoo.com'
-  - '+.kooyx.com'
   - '+.koplayer.com'
   - '+.koreabt.com'
   - '+.koreaxing.com'
@@ -35033,6 +35021,7 @@ payload:
   - '+.lanzoug.com'
   - '+.lanzoui.com'
   - '+.lanzouj.com'
+  - '+.lanzoul.com'
   - '+.lanzoum.com'
   - '+.lanzoup.com'
   - '+.lanzouq.com'
@@ -35592,7 +35581,6 @@ payload:
   - '+.leyoucp.com'
   - '+.leyoujia.com'
   - '+.leyouquan.com'
-  - '+.leyuanbaby.com'
   - '+.leyubox.com'
   - '+.leyue100.com'
   - '+.leyun001.com'
@@ -36348,7 +36336,6 @@ payload:
   - '+.lixianhua.com'
   - '+.lixiaocrm.com'
   - '+.lixiaolai.com'
-  - '+.lixiaomeng.net'
   - '+.lixiaoskb.com'
   - '+.lixiaoyun.com'
   - '+.lixiaozhe.com'
@@ -36706,7 +36693,6 @@ payload:
   - '+.longyusheng.org'
   - '+.longzhongtv.com'
   - '+.longzhu.com'
-  - '+.longzhu.tv'
   - '+.longzhulive.com'
   - '+.longzu.com'
   - '+.lonlife.org'
@@ -37515,6 +37501,7 @@ payload:
   - '+.magicwatchface.com'
   - '+.magicwinmail.com'
   - '+.magicyourlife101.com'
+  - '+.magiskcn.com'
   - '+.magook.com'
   - '+.maguang.net'
   - '+.magvision.com'
@@ -38743,7 +38730,6 @@ payload:
   - '+.minerhome.com'
   - '+.minesage.com'
   - '+.minewtech.com'
-  - '+.ming80.com'
   - '+.mingbaoxinwen.com'
   - '+.mingbianji.com'
   - '+.mingcalc.com'
@@ -39139,6 +39125,7 @@ payload:
   - '+.modernsky.com'
   - '+.modernweekly.com'
   - '+.modian.com'
+  - '+.modianverse.com'
   - '+.modooplay.com'
   - '+.modulesocean.com'
   - '+.moduovr.com'
@@ -39899,7 +39886,6 @@ payload:
   - '+.myoldtime.com'
   - '+.myopenwrt.org'
   - '+.myoppo.com'
-  - '+.myoschain.com'
   - '+.myottad.com'
   - '+.myouth.net'
   - '+.myp2pch.net'
@@ -40320,7 +40306,6 @@ payload:
   - '+.neoease.org'
   - '+.neofussvr.sslcs.cdngc.net'
   - '+.neojos.com'
-  - '+.neokylinschool.com'
   - '+.neolee.com'
   - '+.neolix.net'
   - '+.neoremind.com'
@@ -41951,6 +41936,7 @@ payload:
   - '+.pa18.com'
   - '+.pa1pa.com'
   - '+.paahu.com'
+  - '+.paalermat.com'
   - '+.paascloud.net'
   - '+.paat.com'
   - '+.pabulika.com'
@@ -48909,7 +48895,6 @@ payload:
   - '+.songqili.net'
   - '+.songqinedu.com'
   - '+.songqinnet.com'
-  - '+.songsgames.com'
   - '+.songshitang.com'
   - '+.songshizhao.com'
   - '+.songshudiandian.com'
@@ -49809,6 +49794,7 @@ payload:
   - '+.surdoc.net'
   - '+.sure56.com'
   - '+.suremotoo.site'
+  - '+.surgerycast.com'
   - '+.surprising.studio'
   - '+.sursen.com'
   - '+.sursenelec.com'
@@ -59102,6 +59088,7 @@ payload:
   - '+.xuancheng.org'
   - '+.xuandan.com'
   - '+.xuande99.com'
+  - '+.xuandecarpet.com'
   - '+.xuandui.me'
   - '+.xuanfengge.com'
   - '+.xuanfengkeji.com'
@@ -59636,7 +59623,6 @@ payload:
   - '+.y6162.com'
   - '+.y7q8.com'
   - '+.y80s.com'
-  - '+.y821.cc'
   - '+.y999.com'
   - '+.y9photo.com'
   - '+.ya17.com'
@@ -62617,7 +62603,6 @@ payload:
   - '+.zaojiao.com'
   - '+.zaojiu.com'
   - '+.zaojv.com'
-  - '+.zaojvdashi.com'
   - '+.zaole.net'
   - '+.zaopang.com'
   - '+.zaoshu.so'
@@ -63021,7 +63006,6 @@ payload:
   - '+.zgwgfw.com'
   - '+.zgwhfe.com'
   - '+.zgwhw.com'
-  - '+.zgwlmusic.com'
   - '+.zgwt.co'
   - '+.zgwxbbs.com'
   - '+.zgxcfx.com'
