--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3299,6 +3299,7 @@ payload:
   - '+.3mtw.com'
   - '+.3mu.me'
   - '+.3n110.com'
+  - '+.3nbb.com'
   - '+.3nian.com'
   - '+.3png.com'
   - '+.3poo.com'
@@ -4255,6 +4256,7 @@ payload:
   - '+.51yundong.me'
   - '+.51yunli.com'
   - '+.51yuu.com'
+  - '+.51ywx.com'
   - '+.51zan.com'
   - '+.51zbz.com'
   - '+.51zbz.net'
@@ -18323,7 +18325,6 @@ payload:
   - '+.diandanbao.com'
   - '+.diandao.org'
   - '+.diandaxia.com'
-  - '+.diandazuoye.com'
   - '+.diandian.com'
   - '+.diandianshu.com'
   - '+.diandianwaimai.com'
@@ -21940,7 +21941,6 @@ payload:
   - '+.fengmanginfo.com'
   - '+.fengmaniu.com'
   - '+.fengmeng.net'
-  - '+.fengmi.tv'
   - '+.fengmk2.com'
   - '+.fengniao.com'
   - '+.fengniaohuanjing.com'
@@ -30152,6 +30152,7 @@ payload:
   - '+.iosre.com'
   - '+.ioswift.org'
   - '+.iot-online.com'
+  - '+.iot.moe'
   - '+.iot1001.com'
   - '+.iot101.com'
   - '+.iot688.com'
@@ -31272,6 +31273,7 @@ payload:
   - '+.jhrcbank.com'
   - '+.jhsbggw.com'
   - '+.jhscm.com'
+  - '+.jhscrm.com'
   - '+.jhsctv.com'
   - '+.jhsdai.com'
   - '+.jhsfojiao.com'
@@ -35028,6 +35030,7 @@ payload:
   - '+.lanzout.com'
   - '+.lanzouw.com'
   - '+.lanzoux.com'
+  - '+.lanzouy.com'
   - '+.lanzun.net'
   - '+.lao9123.com'
   - '+.laob.me'
@@ -37894,6 +37897,7 @@ payload:
   - '+.maxhub.vip'
   - '+.maxiang.info'
   - '+.maxiang.io'
+  - '+.maxiaobang.com'
   - '+.maxitas.com'
   - '+.maxjia.com'
   - '+.maxket.com'
@@ -39973,6 +39977,7 @@ payload:
   - '+.mywang.net'
   - '+.mywayboo.net'
   - '+.myweimai.com'
+  - '+.mywhh.com'
   - '+.mywll.com'
   - '+.mywood.cc'
   - '+.myxypt.com'
@@ -41573,6 +41578,7 @@ payload:
   - '+.openedv.com'
   - '+.openerp.hk'
   - '+.openeuler.org'
+  - '+.openfrp.net'
   - '+.opengcc.org'
   - '+.opengslb.com'
   - '+.openinstall.io'
@@ -42607,7 +42613,6 @@ payload:
   - '+.pifukezaixian.com'
   - '+.pig.ai'
   - '+.pig4cloud.com'
-  - '+.pig66.com'
   - '+.pigai.org'
   - '+.pigcms.com'
   - '+.pigjian.com'
@@ -46751,7 +46756,6 @@ payload:
   - '+.seo.tm'
   - '+.seo123.net'
   - '+.seo628.com'
-  - '+.seo8.org'
   - '+.seo8o.com'
   - '+.seocun.com'
   - '+.seocxw.com'
@@ -50792,6 +50796,7 @@ payload:
   - '+.tbl-import.com'
   - '+.tblk.me'
   - '+.tbnimg.com'
+  - '+.tboxn.com'
   - '+.tbq168.com'
   - '+.tbqw.com'
   - '+.tbsandbox.com'
@@ -56800,6 +56805,7 @@ payload:
   - '+.wuzhenfestival.com'
   - '+.wuzhenpay.com'
   - '+.wuzhenwic.org'
+  - '+.wuzhenwucun.com'
   - '+.wuzhicms.com'
   - '+.wuzhiwei.net'
   - '+.wuzhouqianzheng.com'
