--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3594,7 +3594,6 @@ payload:
   - '+.4f89.com'
   - '+.4fang.net'
   - '+.4fcom.net'
-  - '+.4gfy.com'
   - '+.4ggogo.com'
   - '+.4gh6.com'
   - '+.4glte.org'
@@ -5378,7 +5377,6 @@ payload:
   - '+.6789.net'
   - '+.678922c.com'
   - '+.6789che.com'
-  - '+.6789go.com'
   - '+.678edu.net'
   - '+.678hyw.com'
   - '+.678ie.com'
@@ -6127,6 +6125,7 @@ payload:
   - '+.8558.org'
   - '+.85679999.com'
   - '+.857yzf.com'
+  - '+.8587.se'
   - '+.85878078.com'
   - '+.858game.com'
   - '+.858guakao.com'
@@ -6486,7 +6485,6 @@ payload:
   - '+.9191mr.com'
   - '+.9191net.com'
   - '+.9191zx.com'
-  - '+.919377.com'
   - '+.91985.com'
   - '+.91ac.com'
   - '+.91act.com'
@@ -9797,7 +9795,6 @@ payload:
   - '+.baiquefahuasi.com'
   - '+.baironginc.com'
   - '+.bairuitech.com'
-  - '+.baise520.com'
   - '+.baiseyun.com'
   - '+.baishakm.com'
   - '+.baishan-cloud.com'
@@ -10116,7 +10113,6 @@ payload:
   - '+.barretlee.com'
   - '+.bartender.cc'
   - '+.base64.us'
-  - '+.base9174.com'
   - '+.basecity.com'
   - '+.basemu.com'
   - '+.basequan.com'
@@ -10817,7 +10813,6 @@ payload:
   - '+.bihu-static.com'
   - '+.bihu.com'
   - '+.bihubao.com'
-  - '+.bii-erg.com'
   - '+.biikan.com'
   - '+.biji.io'
   - '+.biji13.com'
@@ -11174,7 +11169,6 @@ payload:
   - '+.bjdsppa.com'
   - '+.bjdt360.com'
   - '+.bjeasycom.com'
-  - '+.bjepn.com'
   - '+.bjewaytek.com'
   - '+.bjexmail.com'
   - '+.bjexx.com'
@@ -12133,7 +12127,6 @@ payload:
   - '+.by-health.com'
   - '+.by56.com'
   - '+.by6sx.com'
-  - '+.bybbs.org'
   - '+.bybieyang.com'
   - '+.bybutter.com'
   - '+.bybzj.com'
@@ -12461,7 +12454,6 @@ payload:
   - '+.caishencai.com'
   - '+.caishenpo.com'
   - '+.caishenwang.online'
-  - '+.caishimv.com'
   - '+.caishuixxi.com'
   - '+.caistv.com'
   - '+.cait.com'
@@ -13309,7 +13301,6 @@ payload:
   - '+.cernet2.net'
   - '+.cersp.com'
   - '+.ces-transaction.com'
-  - '+.cescnb.com'
   - '+.ceseasons.com'
   - '+.cesfutures.com'
   - '+.ceshi.com'
@@ -14448,7 +14439,6 @@ payload:
   - '+.chinasanc.com'
   - '+.chinasatcom.com'
   - '+.chinasb.org'
-  - '+.chinasbj.net'
   - '+.chinasbsp.com'
   - '+.chinasciencejournal.com'
   - '+.chinascopefinancial.com'
@@ -17939,6 +17929,7 @@ payload:
   - '+.ddweilai.com'
   - '+.ddwhm.com'
   - '+.ddwzh.com'
+  - '+.ddxinwen.com'
   - '+.ddxq.mobi'
   - '+.ddxs.cc'
   - '+.ddxstxt8.com'
@@ -18781,7 +18772,6 @@ payload:
   - '+.dlzb.com'
   - '+.dlztb.com'
   - '+.dlzyc.com'
-  - '+.dlzycf.com'
   - '+.dm004.net'
   - '+.dm0571.com'
   - '+.dm176.com'
@@ -19716,7 +19706,6 @@ payload:
   - '+.dx168.com'
   - '+.dxbei.com'
   - '+.dxclinics.com'
-  - '+.dxcm.net'
   - '+.dxda.com'
   - '+.dxdlw.com'
   - '+.dxecs.com'
@@ -20432,7 +20421,6 @@ payload:
   - '+.efesco.com'
   - '+.eff-soft.com'
   - '+.effapp.com'
-  - '+.effecthub.com'
   - '+.efficient.hk'
   - '+.effirst.com'
   - '+.efivestar.com'
@@ -20911,7 +20899,6 @@ payload:
   - '+.erxe.club'
   - '+.erya100.com'
   - '+.eryajf.net'
-  - '+.eryuapp.com'
   - '+.eryyutu.com'
   - '+.es-soccer.com'
   - '+.es123.com'
@@ -24447,7 +24434,6 @@ payload:
   - '+.gs99gs.com'
   - '+.gsadds.com'
   - '+.gsafc.com'
-  - '+.gsafcct.com'
   - '+.gsbankchina.com'
   - '+.gsbankmall.com'
   - '+.gscidc.net'
@@ -24485,7 +24471,6 @@ payload:
   - '+.gsxservice.com'
   - '+.gsxtj.com'
   - '+.gsxzq.com'
-  - '+.gszhuli.com'
   - '+.gszlyy.com'
   - '+.gszph.com'
   - '+.gt-oil.com'
@@ -24943,7 +24928,6 @@ payload:
   - '+.gxsky.com'
   - '+.gxtodo.com'
   - '+.gxtstatic.com'
-  - '+.gxw98.com'
   - '+.gxwmcu.com'
   - '+.gxxgle.com'
   - '+.gxxiaotutu.com'
@@ -28259,7 +28243,6 @@ payload:
   - '+.huming.com'
   - '+.hunancatv.com'
   - '+.hunanedu.net'
-  - '+.hunanpta.com'
   - '+.hunantv.com'
   - '+.hunanwb.com'
   - '+.hunanzhibo.com'
@@ -30770,7 +30753,6 @@ payload:
   - '+.ixcv.com'
   - '+.ixdc.org'
   - '+.ixfc.net'
-  - '+.ixiangche.com'
   - '+.ixiangyu.com'
   - '+.ixianlai.com'
   - '+.ixianzong.com'
@@ -31713,6 +31695,7 @@ payload:
   - '+.jin10x.com'
   - '+.jin24k.com'
   - '+.jinanguanggao.com'
+  - '+.jinanqianji.com'
   - '+.jinanxww.com'
   - '+.jinbaiteng.com'
   - '+.jinbaobeiqiming.com'
@@ -32366,7 +32349,6 @@ payload:
   - '+.jnrain.com'
   - '+.jnsdgz.com'
   - '+.jnshu.com'
-  - '+.jnsino.com'
   - '+.jnstdc.com'
   - '+.jntinchina.com'
   - '+.jntyhl.com'
@@ -32407,7 +32389,6 @@ payload:
   - '+.jobhb.com'
   - '+.jobi5.com'
   - '+.jobkoo.com'
-  - '+.jobksd.com'
   - '+.jobpin.com'
   - '+.jobsalon.net'
   - '+.jobsdigg.com'
@@ -32565,7 +32546,6 @@ payload:
   - '+.jqw.com'
   - '+.jqw0099.com'
   - '+.jqwater.com'
-  - '+.jqzhu.com'
   - '+.jqzhuangshi.com'
   - '+.jqzjop.com'
   - '+.jqzw.com'
@@ -32888,7 +32868,6 @@ payload:
   - '+.jukebao.com'
   - '+.jukebao123.com'
   - '+.jukejia.com'
-  - '+.juketool.com'
   - '+.jukuu.com'
   - '+.julaibao.com'
   - '+.julanhp.com'
@@ -33227,6 +33206,7 @@ payload:
   - '+.jysq.net'
   - '+.jyss.net'
   - '+.jysyzk.com'
+  - '+.jytdlz.com'
   - '+.jyteasy.com'
   - '+.jyuvip.com'
   - '+.jywstw.com'
@@ -34675,10 +34655,14 @@ payload:
   - '+.kuzhengame.com'
   - '+.kveaa.com'
   - '+.kvecc.com'
+  - '+.kveff.com'
   - '+.kveii.com'
   - '+.kvemm.com'
   - '+.kvenjoy.com'
   - '+.kvezz.com'
+  - '+.kvhcc.com'
+  - '+.kvhee.com'
+  - '+.kvhmm.com'
   - '+.kviso.com'
   - '+.kvkft.com'
   - '+.kvogues.com'
@@ -35100,6 +35084,7 @@ payload:
   - '+.laoyuanji.com'
   - '+.laoyuegou.com'
   - '+.laoyuge.com'
+  - '+.laozhaopianxiufu.com'
   - '+.laozizhu.com'
   - '+.laozongyi.com'
   - '+.laozu.com'
@@ -35653,7 +35638,6 @@ payload:
   - '+.lhs11.com'
   - '+.lhsdad.com'
   - '+.lhsoso.com'
-  - '+.lhtjyy.com'
   - '+.lhwill.com'
   - '+.lhwytj.com'
   - '+.lhy1.xyz'
@@ -35839,7 +35823,6 @@ payload:
   - '+.lieyou.com'
   - '+.lieyuncapital.com'
   - '+.lieyuncj.com'
-  - '+.lieyunwang.com'
   - '+.lif8.com'
   - '+.lifan.com'
   - '+.life365.com'
@@ -37998,6 +37981,7 @@ payload:
   - '+.mch5k.com'
   - '+.mchat.com'
   - '+.mchifi.com'
+  - '+.mcidc.net'
   - '+.mcjcjx.com'
   - '+.mcjd.net'
   - '+.mcmssc.com'
@@ -38007,7 +37991,6 @@ payload:
   - '+.mcpmaid.com'
   - '+.mcqyy.com'
   - '+.mcsafebox.com'
-  - '+.mcsjtz.com'
   - '+.mcu-home.com'
   - '+.mcufan.com'
   - '+.mcuisp.com'
@@ -38811,7 +38794,6 @@ payload:
   - '+.minitiao.com'
   - '+.minitos.com'
   - '+.miniui.com'
-  - '+.miniwangdai.com'
   - '+.minixiazai.com'
   - '+.miniyounger.com'
   - '+.minor-tech.com'
@@ -38877,6 +38859,7 @@ payload:
   - '+.mixcapp.com'
   - '+.mixdo.net'
   - '+.mixian88.com'
+  - '+.mixiaojin.com'
   - '+.mixin.cc'
   - '+.mixiong.tv'
   - '+.mixrnb.com'
@@ -38904,10 +38887,10 @@ payload:
   - '+.mjceo.com'
   - '+.mjh5.com'
   - '+.mjia.cc'
+  - '+.mjj.edu.ge'
   - '+.mjjcn.com'
   - '+.mjjq.com'
   - '+.mjju.net'
-  - '+.mjjxkj.com'
   - '+.mjlong.com'
   - '+.mjmj8.net'
   - '+.mjmjm.com'
@@ -39682,6 +39665,7 @@ payload:
   - '+.mx3g.com'
   - '+.mxarts.com'
   - '+.mxbc.com'
+  - '+.mxbc.net'
   - '+.mxchip.com'
   - '+.mxddp.com'
   - '+.mxde.com'
@@ -40033,6 +40017,7 @@ payload:
   - '+.n423.com'
   - '+.n459.com'
   - '+.n5878.com'
+  - '+.n6579.com'
   - '+.n77777777.com'
   - '+.n802.com'
   - '+.n8389.com'
@@ -40233,7 +40218,6 @@ payload:
   - '+.ncfcsa.org'
   - '+.ncfcw.net'
   - '+.ncfgroup.com'
-  - '+.ncfstatic.com'
   - '+.ncfwx.com'
   - '+.ncfxwhjjh.com'
   - '+.ncfz.com'
@@ -40756,7 +40740,6 @@ payload:
   - '+.njuftp.org'
   - '+.njupt-sacc.com'
   - '+.njw88.com'
-  - '+.njwfgs.com'
   - '+.njwww.net'
   - '+.njxmsm.com'
   - '+.njxsmaofa.com'
@@ -40802,12 +40785,10 @@ payload:
   - '+.nmimi.com'
   - '+.nmkjxy.com'
   - '+.nmmwz.com'
-  - '+.nmszjy.com'
   - '+.nmtyxy.com'
   - '+.nmvps.com'
   - '+.nmweidian.com'
   - '+.nmysyey.com'
-  - '+.nmyygs.com'
   - '+.nmzh.net'
   - '+.nmzol.com'
   - '+.nmzzlhwlkj.com'
@@ -43759,6 +43740,7 @@ payload:
   - '+.qianhujz.com'
   - '+.qianinfo.com'
   - '+.qianjia.com'
+  - '+.qianjiapp.com'
   - '+.qianjiayue.com'
   - '+.qianjin5.com'
   - '+.qianjing.com'
@@ -44557,7 +44539,6 @@ payload:
   - '+.qrtest.com'
   - '+.qrx.cc'
   - '+.qs12315.com'
-  - '+.qs7ly.com'
   - '+.qs921.com'
   - '+.qsacg.vip'
   - '+.qsbank.cc'
@@ -44826,6 +44807,7 @@ payload:
   - '+.qushimeiti.com'
   - '+.qushiw.com'
   - '+.qushixi.net'
+  - '+.qushoumiao.com'
   - '+.qutaiwan.com'
   - '+.qutanme.com'
   - '+.qutaojiao.com'
@@ -44972,7 +44954,6 @@ payload:
   - '+.qyyqyj.com'
   - '+.qyzba.club'
   - '+.qyzc.net'
-  - '+.qyzjc.com'
   - '+.qz100.com'
   - '+.qz123.com'
   - '+.qz828.com'
@@ -45861,7 +45842,6 @@ payload:
   - '+.ruiruigeblog.com'
   - '+.ruiscz.com'
   - '+.ruisizt.com'
-  - '+.ruisky.com'
   - '+.ruitairt.com'
   - '+.ruitiancapital.com'
   - '+.ruiwant.com'
@@ -46406,7 +46386,6 @@ payload:
   - '+.scweixiao.com'
   - '+.scwj.net'
   - '+.scwlylqx.com'
-  - '+.scwsf.com'
   - '+.scwy.net'
   - '+.scxdf.com'
   - '+.scxyoa.com'
@@ -46486,6 +46465,7 @@ payload:
   - '+.sdhysyyxgs.com'
   - '+.sdiandian.com'
   - '+.sdiborn.com'
+  - '+.sdiccapital.com'
   - '+.sdicin.com'
   - '+.sdicpower.com'
   - '+.sdicvc.com'
@@ -46871,7 +46851,6 @@ payload:
   - '+.sgnet.cc'
   - '+.sgnongkang.com'
   - '+.sgou.com'
-  - '+.sgpy08.com'
   - '+.sgshero.com'
   - '+.sgss8.com'
   - '+.sgsxw.com'
@@ -48372,7 +48351,6 @@ payload:
   - '+.sjono.com'
   - '+.sjpcw.com'
   - '+.sjq315.com'
-  - '+.sjqkd.com'
   - '+.sjrwzz.com'
   - '+.sjsbk.com'
   - '+.sjsydq.com'
@@ -48606,7 +48584,6 @@ payload:
   - '+.smdyvip.com'
   - '+.sme8718.com'
   - '+.smebb.com'
-  - '+.smejs.com'
   - '+.smemo.info'
   - '+.smeoa.com'
   - '+.smesun.com'
@@ -49921,7 +49898,6 @@ payload:
   - '+.sxcits.com'
   - '+.sxcm.net'
   - '+.sxcntv.com'
-  - '+.sxcqzyc.com'
   - '+.sxctf.com'
   - '+.sxcwit.com'
   - '+.sxcyts.com'
@@ -50465,7 +50441,6 @@ payload:
   - '+.taihe.com'
   - '+.taihehospital.com'
   - '+.taihemedia.com'
-  - '+.taiho.cc'
   - '+.taihuoniao.com'
   - '+.taihuwang.com'
   - '+.taihuyuan.com'
@@ -50763,7 +50738,6 @@ payload:
   - '+.taskyou.net'
   - '+.tasly.com'
   - '+.tason.xyz'
-  - '+.tass-t.com'
   - '+.tastespirit.com'
   - '+.tastones.com'
   - '+.tastysteak.com'
@@ -51794,7 +51768,6 @@ payload:
   - '+.togj.com'
   - '+.togocareer.com'
   - '+.togogo.net'
-  - '+.tohic.net'
   - '+.tohkalove.com'
   - '+.tohosting.com'
   - '+.tohosting.net'
@@ -54923,7 +54896,6 @@ payload:
   - '+.websem.cc'
   - '+.webseo9.com'
   - '+.webshao.com'
-  - '+.webshu.com'
   - '+.webshu.net'
   - '+.websjcdn.com'
   - '+.websjx.com'
@@ -55712,7 +55684,6 @@ payload:
   - '+.whtcm.net'
   - '+.whtdcb.com'
   - '+.whtdsc.com'
-  - '+.whtech-sonic.net'
   - '+.whtfzy.com'
   - '+.whtmhh.com'
   - '+.whtongyun.com'
@@ -57166,7 +57137,6 @@ payload:
   - '+.xazzg.com'
   - '+.xazzp.com'
   - '+.xazzs.com'
-  - '+.xb100.net'
   - '+.xb21cn.com'
   - '+.xb2s.com'
   - '+.xb5.cc'
@@ -58065,7 +58035,6 @@ payload:
   - '+.xier.tech'
   - '+.xiesk.com'
   - '+.xieso.net'
-  - '+.xietongbw.com'
   - '+.xietui.com'
   - '+.xiexiaoyuan.com'
   - '+.xiexiebang.com'
@@ -58590,7 +58559,6 @@ payload:
   - '+.xiyuege.com'
   - '+.xiyun.net'
   - '+.xiyurumen.com'
-  - '+.xizanggl.com'
   - '+.xizangguolv.net'
   - '+.xizangqinglv.com'
   - '+.xizangzl.com'
@@ -58664,7 +58632,6 @@ payload:
   - '+.xjwljb.com'
   - '+.xjwyglw.com'
   - '+.xjxbx.com'
-  - '+.xjyaxin.com'
   - '+.xjyou88.com'
   - '+.xjytjt.com'
   - '+.xjzdjx.com'
@@ -58931,7 +58898,6 @@ payload:
   - '+.xpcha.com'
   - '+.xpdf.net'
   - '+.xpjedu.com'
-  - '+.xpjj.net'
   - '+.xpjm.net'
   - '+.xplian.net'
   - '+.xpsheying.com'
@@ -59075,7 +59041,6 @@ payload:
   - '+.xtongs.com'
   - '+.xtrc.net'
   - '+.xttblog.com'
-  - '+.xttongcai.com'
   - '+.xttongji.com'
   - '+.xttz.com'
   - '+.xtu2.com'
@@ -59254,7 +59219,6 @@ payload:
   - '+.xuliangwei.com'
   - '+.xulihang.me'
   - '+.xulizui6.com'
-  - '+.xulonggame.com'
   - '+.xulv.net'
   - '+.xumenger.com'
   - '+.xumingxiang.com'
@@ -59610,7 +59574,6 @@ payload:
   - '+.xztylfu.com'
   - '+.xztzb.com'
   - '+.xzw.com'
-  - '+.xzwwxn.com'
   - '+.xzx.com'
   - '+.xzxw.com'
   - '+.xzyhealth.com'
@@ -60089,7 +60052,6 @@ payload:
   - '+.yemeihuoguo.com'
   - '+.yemet.com'
   - '+.yemi.me'
-  - '+.yenisezonmodelleri.com'
   - '+.yeolar.com'
   - '+.yeoner.com'
   - '+.yeree.com'
@@ -60985,7 +60947,6 @@ payload:
   - '+.ymtjfxly.com'
   - '+.ymtmt.com'
   - '+.ymvkt.com'
-  - '+.ymwl111.com'
   - '+.ymwl234.com'
   - '+.ymxinxi.com'
   - '+.ymxxs.com'
@@ -62252,6 +62213,7 @@ payload:
   - '+.yuzhuan.com'
   - '+.yuzhulin.com'
   - '+.yuzi.net'
+  - '+.yuzvf.com'
   - '+.yuzzl.com'
   - '+.yveqi.com'
   - '+.yvv.in'
@@ -62693,7 +62655,6 @@ payload:
   - '+.zcdog.com'
   - '+.zcdsp.com'
   - '+.zcfc.com'
-  - '+.zcfccs.com'
   - '+.zcfirst.com'
   - '+.zcfuhua.com'
   - '+.zcfy.cc'
@@ -63169,7 +63130,6 @@ payload:
   - '+.zhaobeidaxiao.com'
   - '+.zhaobeijing.com'
   - '+.zhaobuxiu.com'
-  - '+.zhaocaibb.com'
   - '+.zhaocaihr.com'
   - '+.zhaocait.com'
   - '+.zhaocaiyan.com'
@@ -63331,7 +63291,6 @@ payload:
   - '+.zhenimg.com'
   - '+.zhenjiang-marathon.com'
   - '+.zhenleishan.com'
-  - '+.zhenlian.online'
   - '+.zhenlinxin.com'
   - '+.zhenlishen.com'
   - '+.zhenpin.com'
@@ -64313,7 +64272,6 @@ payload:
   - '+.zjpost.com'
   - '+.zjpubservice.com'
   - '+.zjqbj.com'
-  - '+.zjqk110.com'
   - '+.zjqll.com'
   - '+.zjrc.com'
   - '+.zjrc.net'
