--- a/directbak.yaml
+++ b/directbak.yaml
@@ -221,7 +221,6 @@ payload:
   - '+.027down.com'
   - '+.027eat.com'
   - '+.027fcyy.com'
-  - '+.027hcss.com'
   - '+.027hhl.com'
   - '+.027hpedu.com'
   - '+.027hpit.com'
@@ -1755,6 +1754,7 @@ payload:
   - '+.195155.com'
   - '+.195855.com'
   - '+.19687.com'
+  - '+.197.com'
   - '+.197946.com'
   - '+.197c.com'
   - '+.198254.com'
@@ -2526,7 +2526,6 @@ payload:
   - '+.300113.com'
   - '+.300400.net'
   - '+.300624.com'
-  - '+.300avs.com'
   - '+.300hu.com'
   - '+.300p.com'
   - '+.300ppt.com'
@@ -4367,6 +4366,7 @@ payload:
   - '+.5299shop.com'
   - '+.529c31.com'
   - '+.52ai.com'
+  - '+.52aimo.com'
   - '+.52ali88.com'
   - '+.52analysis.com'
   - '+.52article.com'
@@ -8360,6 +8360,7 @@ payload:
   - '+.aliyunddos1029.com'
   - '+.aliyunddos1030.com'
   - '+.aliyundrive.com'
+  - '+.aliyundrive.net'
   - '+.aliyunduncc.com'
   - '+.aliyundunwaf.com'
   - '+.aliyunedu.net'
@@ -10288,6 +10289,7 @@ payload:
   - '+.bdfzcd.net'
   - '+.bdfzgz.net'
   - '+.bdgamelive.com'
+  - '+.bdgp.cc'
   - '+.bdgslb.com'
   - '+.bdimg.com'
   - '+.bdinfo.net'
@@ -10492,6 +10494,7 @@ payload:
   - '+.benhu01.com'
   - '+.beniao.com'
   - '+.benimg.com'
+  - '+.benjamin.fun'
   - '+.benkejieye.com'
   - '+.benkua.com'
   - '+.benlai.com'
@@ -10906,7 +10909,6 @@ payload:
   - '+.biotecan.com'
   - '+.bipush.com'
   - '+.bipvcn.com'
-  - '+.biqiga.com'
   - '+.biqige.cc'
   - '+.biqigewx.com'
   - '+.biqiudu.com'
@@ -10981,7 +10983,6 @@ payload:
   - '+.birdpush.com'
   - '+.bisairi.com'
   - '+.bisenet.com'
-  - '+.bishe1234.com'
   - '+.bishen.ink'
   - '+.bishengoffice.com'
   - '+.bisheziliao.com'
@@ -13933,7 +13934,6 @@ payload:
   - '+.china-drm.net'
   - '+.china-dt.com'
   - '+.china-ef.com'
-  - '+.china-efe.org'
   - '+.china-eia.com'
   - '+.china-embassy.org'
   - '+.china-engine.net'
@@ -17813,6 +17813,7 @@ payload:
   - '+.dcarapi.com'
   - '+.dcarimg.com'
   - '+.dcarstatic.com'
+  - '+.dcarvod.com'
   - '+.dcb123.com'
   - '+.dcdapp.com'
   - '+.dcement.com'
@@ -18083,7 +18084,6 @@ payload:
   - '+.deskier.com'
   - '+.desktopcal.com'
   - '+.desktopqa.com'
-  - '+.desktx.com'
   - '+.deskwc.com'
   - '+.despiertocfilms.com'
   - '+.destoon.com'
@@ -18114,6 +18114,7 @@ payload:
   - '+.devzeng.com'
   - '+.dewmobile.net'
   - '+.dewu.com'
+  - '+.dewucdn.com'
   - '+.dewumall.com'
   - '+.dexian.mobi'
   - '+.dexindat.com'
@@ -19228,7 +19229,6 @@ payload:
   - '+.download.windowsupdate.com'
   - '+.downloadcenter.samsung.com'
   - '+.downok.com'
-  - '+.downol.com'
   - '+.downos.com'
   - '+.downpp.com'
   - '+.downsave.com'
@@ -19379,7 +19379,6 @@ payload:
   - '+.dshrc.com'
   - '+.dskb.co'
   - '+.dskystudio.com'
-  - '+.dslp168.com'
   - '+.dsmyiyuan.com'
   - '+.dsmzyy.com'
   - '+.dsmzyy120.com'
@@ -20060,6 +20059,7 @@ payload:
   - '+.easytouch.com'
   - '+.easytrip.com'
   - '+.easyzw.com'
+  - '+.eateapp.com'
   - '+.eatonchn.com'
   - '+.eaydu.com'
   - '+.eayou.com'
@@ -21725,7 +21725,6 @@ payload:
   - '+.fe2x.cc'
   - '+.fe520.com'
   - '+.fearlazy.com'
-  - '+.feaye.com'
   - '+.fecable-gz.com'
   - '+.fecn.net'
   - '+.fecshop.com'
@@ -22525,6 +22524,7 @@ payload:
   - '+.fqgj.net'
   - '+.fqis.xin'
   - '+.fqnovel.com'
+  - '+.fqnovelpic.com'
   - '+.fqnovelstatic.com'
   - '+.fqpai.com'
   - '+.fqsszx.com'
@@ -23642,7 +23642,6 @@ payload:
   - '+.gfjl.org'
   - '+.gfnormal00an.com'
   - '+.gfrtrttweet.com'
-  - '+.gfsi-food.com'
   - '+.gftuan.com'
   - '+.gfun.me'
   - '+.gfund.com'
@@ -24057,6 +24056,8 @@ payload:
   - '+.gold678.com'
   - '+.goldapple.name'
   - '+.goldav.net'
+  - '+.golday666.com'
+  - '+.golday999.com'
   - '+.goldbj.com'
   - '+.goldbox.vip'
   - '+.golden-book.com'
@@ -25497,8 +25498,6 @@ payload:
   - '+.hanmeilin.com'
   - '+.hanmi520.com'
   - '+.hannor.com'
-  - '+.hanqiweb.com'
-  - '+.hanqiweb.net'
   - '+.hanshijiaoye.com'
   - '+.hanshow.com'
   - '+.hanshuliang.com'
@@ -26753,7 +26752,6 @@ payload:
   - '+.himengyou.com'
   - '+.himetoo.com'
   - '+.himigame.com'
-  - '+.himiku.com'
   - '+.himofi.com'
   - '+.himuzik.net'
   - '+.himy2.com'
@@ -27060,6 +27058,7 @@ payload:
   - '+.hnhaofang.com'
   - '+.hnhnled.com'
   - '+.hnhxhz.com'
+  - '+.hnhxin.com'
   - '+.hnhxxk.com'
   - '+.hniec.org'
   - '+.hniois.com'
@@ -27658,6 +27657,7 @@ payload:
   - '+.htexam.com'
   - '+.htexam.net'
   - '+.htfcn.com'
+  - '+.htffund.com'
   - '+.htfoxit.com'
   - '+.htfutures.com'
   - '+.htgj.com'
@@ -27696,6 +27696,7 @@ payload:
   - '+.httingshu.com'
   - '+.httpcanary.com'
   - '+.httpcn.com'
+  - '+.httpdns.pro'
   - '+.hturl.cc'
   - '+.htuwenming.com'
   - '+.htvaas.com'
@@ -28041,6 +28042,7 @@ payload:
   - '+.huhoo.net'
   - '+.huhua.net'
   - '+.huhuang.net'
+  - '+.huhudi.com'
   - '+.huhuguanjia.com'
   - '+.huhuhiiuio.com'
   - '+.huhustory.com'
@@ -31233,7 +31235,6 @@ payload:
   - '+.jhscm.com'
   - '+.jhscrm.com'
   - '+.jhsctv.com'
-  - '+.jhsdai.com'
   - '+.jhsfojiao.com'
   - '+.jhsjtxx.com'
   - '+.jhssapp.com'
@@ -31242,6 +31243,7 @@ payload:
   - '+.jhwaimai.com'
   - '+.jhxms.com'
   - '+.jhyongyou.com'
+  - '+.jhzhizao.com'
   - '+.ji36.net'
   - '+.ji7.com'
   - '+.jia-he-jia.com'
@@ -31728,6 +31730,7 @@ payload:
   - '+.jingdongdaili.com'
   - '+.jingdongyouxuan.com'
   - '+.jingdw.com'
+  - '+.jingfanshidai.com'
   - '+.jingfentui.com'
   - '+.jingguan.ai'
   - '+.jinghaishop.com'
@@ -33041,7 +33044,6 @@ payload:
   - '+.jwview.com'
   - '+.jwwey.com'
   - '+.jwx365.com'
-  - '+.jwxlschool.com'
   - '+.jwyun.net'
   - '+.jx-bank.com'
   - '+.jx-nc.com'
@@ -34280,6 +34282,7 @@ payload:
   - '+.ksaxx.com'
   - '+.ksbao.cc'
   - '+.ksbao.com'
+  - '+.ksc-test.com'
   - '+.kscac.com'
   - '+.kscdns.com'
   - '+.ksdkcks.com'
@@ -34603,7 +34606,6 @@ payload:
   - '+.kutongji.com'
   - '+.kutoo8.com'
   - '+.kutsg.com'
-  - '+.kutu66.com'
   - '+.kutuan.com'
   - '+.kuuhuu.com'
   - '+.kuuke.com'
@@ -34616,6 +34618,7 @@ payload:
   - '+.kuwuu.com'
   - '+.kuxiaoji.com'
   - '+.kuxuexi.com'
+  - '+.kuy8.com'
   - '+.kuyh.com'
   - '+.kuyibu.com'
   - '+.kuyin123.com'
@@ -35304,7 +35307,6 @@ payload:
   - '+.leftlady.com'
   - '+.leftso.com'
   - '+.legend-go.com'
-  - '+.legendh5.com'
   - '+.legendsec.com'
   - '+.legendtkl.com'
   - '+.legoflow.com'
@@ -37453,6 +37455,7 @@ payload:
   - '+.magentochina.org'
   - '+.magewell.com'
   - '+.magi.com'
+  - '+.magicax.com'
   - '+.magicboxgame.com'
   - '+.magicdata.io'
   - '+.magicleaders.com'
@@ -38399,7 +38402,6 @@ payload:
   - '+.mgw999.com'
   - '+.mgwxw.com'
   - '+.mgxzsy.com'
-  - '+.mgyapp.com'
   - '+.mgyxw.net'
   - '+.mgyyw.com'
   - '+.mgzf.com'
@@ -38606,6 +38608,7 @@ payload:
   - '+.miidol.com'
   - '+.miiee.com'
   - '+.miinaa.com'
+  - '+.miinsurtech.com'
   - '+.miit-icdc.org'
   - '+.miitip.org'
   - '+.mij.cc'
@@ -40281,6 +40284,7 @@ payload:
   - '+.nesbbs.com'
   - '+.nestgene.com'
   - '+.nestlechinese.com'
+  - '+.nestlot.com'
   - '+.net-add.com'
   - '+.net-swift.com'
   - '+.net0516.com'
@@ -40380,7 +40384,6 @@ payload:
   - '+.newdu.com'
   - '+.newdun.com'
   - '+.newdun.net'
-  - '+.newdur.com'
   - '+.newer2001.com'
   - '+.newfavor.net'
   - '+.newgamer.com'
@@ -41686,6 +41689,7 @@ payload:
   - '+.oshwhub.com'
   - '+.osjiaju.com'
   - '+.osk-clean.com'
+  - '+.oskwai.com'
   - '+.osmsg.com'
   - '+.osmy.net'
   - '+.osnt.wang'
@@ -43904,6 +43908,7 @@ payload:
   - '+.qilanxiaozhu.co'
   - '+.qilanxiaozhu.net'
   - '+.qilecms.com'
+  - '+.qiliaokj.com'
   - '+.qilinchess.com'
   - '+.qilindao.com'
   - '+.qiling.org'
@@ -45276,6 +45281,7 @@ payload:
   - '+.renjiaoshe.com'
   - '+.renjiyiyuan.com'
   - '+.renlijia.com'
+  - '+.renliwang.xyz'
   - '+.renliwo.com'
   - '+.renlong1688.com'
   - '+.renmaiku.com'
@@ -48548,6 +48554,7 @@ payload:
   - '+.smbxw.com'
   - '+.smc18.com'
   - '+.smc3s.com'
+  - '+.smcic.net'
   - '+.smd88.com'
   - '+.smdcn.net'
   - '+.smdiban.net'
@@ -49034,7 +49041,6 @@ payload:
   - '+.soyoung.com'
   - '+.soyouso.com'
   - '+.soyunion.com'
-  - '+.soyunpan.com'
   - '+.sozdata.com'
   - '+.sozhen.com'
   - '+.sp.cc'
@@ -49411,7 +49417,6 @@ payload:
   - '+.streaming.vn.teslamotors.com'
   - '+.streffy.com'
   - '+.strong-study.com'
-  - '+.strongcms.net'
   - '+.strongled.com'
   - '+.stswjx.com'
   - '+.stubbornhuang.com'
@@ -50282,11 +50287,13 @@ payload:
   - '+.szwb.com'
   - '+.szwblm.com'
   - '+.szwego.com'
+  - '+.szweijubao.com'
   - '+.szweita.com'
   - '+.szwfb.com'
   - '+.szwfzs.com'
   - '+.szwgroup.com'
   - '+.szwstui.com'
+  - '+.szwuyukeji.com'
   - '+.szwwco.com'
   - '+.szxbyx.com'
   - '+.szxdhj.com'
@@ -51235,6 +51242,7 @@ payload:
   - '+.tiancitycdn.com'
   - '+.tiandaoedu.com'
   - '+.tiandi.com'
+  - '+.tianditao.com'
   - '+.tianditu.com'
   - '+.tiandizw.com'
   - '+.tianduntech.com'
@@ -52818,7 +52826,6 @@ payload:
   - '+.tzhwcc.com'
   - '+.tzidt.com'
   - '+.tzjxl.com'
-  - '+.tzkameng.com'
   - '+.tzlib.net'
   - '+.tzm66.com'
   - '+.tzres.com'
@@ -54037,7 +54044,6 @@ payload:
   - '+.voccdn.com'
   - '+.vocinno.com'
   - '+.vodjk.com'
-  - '+.voguego.com'
   - '+.vohringer.com'
   - '+.voicedic.com'
   - '+.voicer.me'
@@ -54049,6 +54055,7 @@ payload:
   - '+.vol.moe'
   - '+.volccdn.com'
   - '+.volceapplog.com'
+  - '+.volces.com'
   - '+.volcfcdndvs.com'
   - '+.volcgslb.com'
   - '+.volcgtm.com'
@@ -55355,6 +55362,7 @@ payload:
   - '+.westsecu.com'
   - '+.westsummitcap.com'
   - '+.wesure100.com'
+  - '+.wetest.net'
   - '+.wetherm.com'
   - '+.weti.me'
   - '+.wetogame.com'
@@ -57490,6 +57498,7 @@ payload:
   - '+.xianbai.me'
   - '+.xianbao.net'
   - '+.xianbdj.com'
+  - '+.xianbeikeji.com'
   - '+.xianbey.com'
   - '+.xianchengyou.com'
   - '+.xianchihuo.net'
@@ -57586,7 +57595,6 @@ payload:
   - '+.xianshua.net'
   - '+.xianshuabao.com'
   - '+.xianshufang.com'
-  - '+.xiantao.com'
   - '+.xianwangs.cc'
   - '+.xianxiadao.com'
   - '+.xianxiadao.net'
@@ -58503,6 +58511,7 @@ payload:
   - '+.xixiarc.com'
   - '+.xixibobo.com'
   - '+.xixiclothing.com'
+  - '+.xixidoudizhu.com'
   - '+.xixik.com'
   - '+.xixik.net'
   - '+.xixin123.com'
@@ -59363,6 +59372,7 @@ payload:
   - '+.xxoojoke.com'
   - '+.xxorg.com'
   - '+.xxpie.com'
+  - '+.xxpkg.com'
   - '+.xxptcs.com'
   - '+.xxqb5200.com'
   - '+.xxqipai.com'
@@ -59892,7 +59902,6 @@ payload:
   - '+.ycpai.com'
   - '+.ycrh-tattoo.com'
   - '+.ycrusher.com'
-  - '+.ycshengwang.com'
   - '+.ycsrc.com'
   - '+.ycsystem.com'
   - '+.yct-tec.com'
@@ -61481,7 +61490,6 @@ payload:
   - '+.yqphh.com'
   - '+.yqptzx.com'
   - '+.yqsbz.com'
-  - '+.yqsns.com'
   - '+.yqtc.com'
   - '+.yqtxzm.com'
   - '+.yqwyx.xyz'
@@ -61790,6 +61798,7 @@ payload:
   - '+.yueyuanzhiye.com'
   - '+.yueyues.com'
   - '+.yueyuevip.com'
+  - '+.yueyueworld.com'
   - '+.yueyuez.com'
   - '+.yueyuxuan.com'
   - '+.yueyuzhushou.com'
@@ -63066,7 +63075,6 @@ payload:
   - '+.zhangyue02.com'
   - '+.zhangyue03.com'
   - '+.zhangyugg.com'
-  - '+.zhangyulive.com'
   - '+.zhangyunling.com'
   - '+.zhangyuqing.me'
   - '+.zhangzhao.me'
@@ -63213,6 +63221,7 @@ payload:
   - '+.zhen-ao.com'
   - '+.zhen.com'
   - '+.zhenai.com'
+  - '+.zhenaihn.com'
   - '+.zhenaoyaoye.com'
   - '+.zhenbi.com'
   - '+.zhenbizi.com'
@@ -63318,7 +63327,6 @@ payload:
   - '+.zhiaimusic.com'
   - '+.zhiannet.com'
   - '+.zhib.net'
-  - '+.zhibao2car.com'
   - '+.zhibiao8.com'
   - '+.zhibo.co'
   - '+.zhibo.me'
@@ -63875,7 +63883,6 @@ payload:
   - '+.zhuohuamg.com'
   - '+.zhuojie.cc'
   - '+.zhuokearts.com'
-  - '+.zhuoku.com'
   - '+.zhuolin.wang'
   - '+.zhuomogroup.com'
   - '+.zhuoquapp.com'
