--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1931,6 +1931,7 @@ payload:
   - '+.1wii.com'
   - '+.1x3x.com'
   - '+.1xiezuo.com'
+  - '+.1xmb.com'
   - '+.1xz.com'
   - '+.1y.com'
   - '+.1y0g.com'
@@ -5772,6 +5773,7 @@ payload:
   - '+.78pan.com'
   - '+.78tp.com'
   - '+.79.com'
+  - '+.79151879798.com'
   - '+.793360.com'
   - '+.7937.com'
   - '+.7940.com'
@@ -6051,7 +6053,6 @@ payload:
   - '+.82222919.com'
   - '+.82250856.com'
   - '+.822644.com'
-  - '+.82326999.com'
   - '+.82335966.com'
   - '+.8234567.com'
   - '+.8246.net'
@@ -6224,6 +6225,7 @@ payload:
   - '+.88303887.com'
   - '+.88360.com'
   - '+.8838sl.com'
+  - '+.883dai.com'
   - '+.884358.com'
   - '+.8844.com'
   - '+.88444l.cc'
@@ -8000,6 +8002,7 @@ payload:
   - '+.airstar.com'
   - '+.airtofly.com'
   - '+.airtu.com'
+  - '+.airtu.me'
   - '+.airwh.com'
   - '+.aisaohuo.com'
   - '+.aisaw.com'
@@ -8027,6 +8030,7 @@ payload:
   - '+.aite.xyz'
   - '+.aitebuy.com'
   - '+.aitecar.com'
+  - '+.aitemall.com'
   - '+.aitemple.com'
   - '+.aiti.fun'
   - '+.aitiancheng.com'
@@ -10876,6 +10880,7 @@ payload:
   - '+.bingtuannet.com'
   - '+.bingwang.cc'
   - '+.bingyan.net'
+  - '+.bingyongjin.vip'
   - '+.binkery.com'
   - '+.binmt.cc'
   - '+.binmtplus.com'
@@ -12686,6 +12691,7 @@ payload:
   - '+.cbmay.com'
   - '+.cbmf.org'
   - '+.cbminfo.com'
+  - '+.cbmwz.net'
   - '+.cbn.me'
   - '+.cbndata.com'
   - '+.cbndata.org'
@@ -13237,6 +13243,7 @@ payload:
   - '+.cenbel.com'
   - '+.cenbohao.com'
   - '+.cencs.com'
+  - '+.cengcloud.net'
   - '+.cenray-ic.com'
   - '+.censh.com'
   - '+.centainfo.com'
@@ -13793,6 +13800,7 @@ payload:
   - '+.chenlb.com'
   - '+.chenlianfu.com'
   - '+.chenlinux.com'
+  - '+.chenlinzuwu.com'
   - '+.chenlongyx.com'
   - '+.chenmomo.com'
   - '+.chenpeng.info'
@@ -13861,6 +13869,7 @@ payload:
   - '+.chezhanri.com'
   - '+.chezhibao.com'
   - '+.chezhubidu.com'
+  - '+.chezhutech.com'
   - '+.chezhuzhinan.com'
   - '+.chezizhu.com'
   - '+.chgcis.com'
@@ -15847,6 +15856,7 @@ payload:
   - '+.cnrmobile.com'
   - '+.cnrouter.com'
   - '+.cnrunda.com'
+  - '+.cnrv.io'
   - '+.cns.hk'
   - '+.cnsaes.org'
   - '+.cnsaibao.com'
@@ -16332,6 +16342,7 @@ payload:
   - '+.cowtransfer.com'
   - '+.coyotebio-lab.com'
   - '+.coyuk.com'
+  - '+.coyuns.net'
   - '+.cozumpartisi.com'
   - '+.cp127w.com'
   - '+.cp365.org'
@@ -19762,6 +19773,9 @@ payload:
   - '+.dyrcb.net'
   - '+.dyrjjt.com'
   - '+.dytechnolog.com'
+  - '+.dytg389.xyz'
+  - '+.dytg390.xyz'
+  - '+.dytg391.xyz'
   - '+.dytol.com'
   - '+.dytt.net'
   - '+.dytt2019.net'
@@ -20455,6 +20469,7 @@ payload:
   - '+.ehcoo.com'
   - '+.ehealthcareforum.com'
   - '+.ehedco.com'
+  - '+.eheren.com'
   - '+.ehijoy.com'
   - '+.ehinvest.hk'
   - '+.ehnasia.com'
@@ -24217,6 +24232,7 @@ payload:
   - '+.gosuncdn.net'
   - '+.gosunm.com'
   - '+.goten.com'
+  - '+.goto2jump.com'
   - '+.gotocdn.com'
   - '+.gotodn.com'
   - '+.gotohz.com'
@@ -24895,6 +24911,7 @@ payload:
   - '+.gxp.cc'
   - '+.gxpfyy.com'
   - '+.gxqcw.com'
+  - '+.gxqintang.com'
   - '+.gxqs.org'
   - '+.gxrc.com'
   - '+.gxrkyy.com'
@@ -26074,6 +26091,7 @@ payload:
   - '+.hbzhan.com'
   - '+.hbzhjxzz.com'
   - '+.hbzhonghai.com'
+  - '+.hbzjjk.com'
   - '+.hbzjzb.com'
   - '+.hbzknet.com'
   - '+.hbzkzxw.com'
@@ -26949,6 +26967,7 @@ payload:
   - '+.hlj-aptech.com'
   - '+.hlje.net'
   - '+.hljjjb.com'
+  - '+.hljjkfp.com'
   - '+.hljjytkj.com'
   - '+.hljnzy.net'
   - '+.hljpost.com'
@@ -27083,9 +27102,11 @@ payload:
   - '+.hnleisu.com'
   - '+.hnliangku.com'
   - '+.hnlxq.com'
+  - '+.hnlyy.com'
   - '+.hnlzhd.com'
   - '+.hnlzw.net'
   - '+.hnmdtv.com'
+  - '+.hnmeilinya.xyz'
   - '+.hnmgjr.com'
   - '+.hnmj.vip'
   - '+.hnmrffm888.com'
@@ -27195,6 +27216,7 @@ payload:
   - '+.hollycrm.com'
   - '+.hollysys.com'
   - '+.hollyuc.com'
+  - '+.holoalpha.com'
   - '+.holoem.com'
   - '+.hologres.io'
   - '+.holteksupport.com'
@@ -28679,6 +28701,7 @@ payload:
   - '+.hzpzs.net'
   - '+.hzqf123.com'
   - '+.hzqiuxue.com'
+  - '+.hzqx.com'
   - '+.hzqz.net'
   - '+.hzr1.com'
   - '+.hzrc.com'
@@ -29533,6 +29556,7 @@ payload:
   - '+.iimzt.com'
   - '+.iincn.net'
   - '+.iiong.com'
+  - '+.iipiano.com'
   - '+.iireadiness.com'
   - '+.iirii.com'
   - '+.iis7.com'
@@ -30965,6 +30989,7 @@ payload:
   - '+.jccsoc.com'
   - '+.jccug.com'
   - '+.jcedu.org'
+  - '+.jcelyj.com'
   - '+.jcf94.com'
   - '+.jcgcn.com'
   - '+.jchelec.com'
@@ -31721,6 +31746,7 @@ payload:
   - '+.jingdaka.com'
   - '+.jingdata.com'
   - '+.jingdian230.com'
+  - '+.jingdiancha.net'
   - '+.jingdianju.com'
   - '+.jingdianlaoge.com'
   - '+.jingdianxitong.com'
@@ -32488,6 +32514,7 @@ payload:
   - '+.jpkcnet.com'
   - '+.jpkix.com'
   - '+.jpmsg.com'
+  - '+.jpnettech.com'
   - '+.jpqp888.com'
   - '+.jpshuntong.com'
   - '+.jpsmile.com'
@@ -33462,6 +33489,7 @@ payload:
   - '+.kankannews.com'
   - '+.kankanzhijian.com'
   - '+.kanketv.com'
+  - '+.kankezw.com'
   - '+.kankun-smartplug.com'
   - '+.kanluzhe.com'
   - '+.kanman.com'
@@ -34743,6 +34771,7 @@ payload:
   - '+.l36h.com'
   - '+.l5550.com'
   - '+.l68.net'
+  - '+.l6bxs.com'
   - '+.l77777777.com'
   - '+.l7audiolab.com'
   - '+.l99.com'
@@ -34803,6 +34832,7 @@ payload:
   - '+.laikan.com'
   - '+.laikanxing.com'
   - '+.laikanxs.com'
+  - '+.laikeerp.com'
   - '+.laiketui.com'
   - '+.lailaihui.com'
   - '+.lailook.net'
@@ -35111,6 +35141,7 @@ payload:
   - '+.lawyee.com'
   - '+.lawyee.net'
   - '+.lawyee.org'
+  - '+.lawyer-wangjiawei.com'
   - '+.lawyer027.com'
   - '+.lawyerbridge.com'
   - '+.lawyermr.com'
@@ -35142,6 +35173,7 @@ payload:
   - '+.lbl520.com'
   - '+.lboyue.com'
   - '+.lbsmshop.com'
+  - '+.lbsrmyy.com'
   - '+.lbwbw.com'
   - '+.lbx777.com'
   - '+.lbxcn.com'
@@ -35569,6 +35601,7 @@ payload:
   - '+.lfcmw.com'
   - '+.lfex.com'
   - '+.lfhacks.com'
+  - '+.lfhospital.net'
   - '+.lfhygl.com'
   - '+.lfidc.net'
   - '+.lfkjgh.com'
@@ -36031,6 +36064,7 @@ payload:
   - '+.linkunbin.com'
   - '+.linkvans.com'
   - '+.linkwebll.com'
+  - '+.linkweway.com'
   - '+.linlizone.com'
   - '+.linlongyun.com'
   - '+.linlongyx.com'
@@ -36139,6 +36173,7 @@ payload:
   - '+.lishizhishi.com'
   - '+.lishouhong.com'
   - '+.lishuhang.me'
+  - '+.lishuhao.ltd'
   - '+.lishui.com'
   - '+.lisinit.com'
   - '+.lisizhang.com'
@@ -37662,6 +37697,7 @@ payload:
   - '+.mangocity.com'
   - '+.mangoebike.com'
   - '+.mangogame.com'
+  - '+.mangren.com'
   - '+.mangrovetreesanya.com'
   - '+.mangtuhuyu.com'
   - '+.manguo42.com'
@@ -38067,6 +38103,7 @@ payload:
   - '+.megvii.com'
   - '+.mei-shu.com'
   - '+.mei.com'
+  - '+.mei1.com'
   - '+.mei1.info'
   - '+.meia.me'
   - '+.meianjuwang.com'
@@ -39989,6 +40026,7 @@ payload:
   - '+.n12m.cc'
   - '+.n21.cc'
   - '+.n3293.com'
+  - '+.n3875.com'
   - '+.n3ko.co'
   - '+.n3sd.com'
   - '+.n4115.com'
@@ -40109,6 +40147,7 @@ payload:
   - '+.nat123.com'
   - '+.natamoo.com'
   - '+.natapp1.cc'
+  - '+.natapp4.cc'
   - '+.natappfree.cc'
   - '+.natbbs.com'
   - '+.natertech.com'
@@ -40272,6 +40311,7 @@ payload:
   - '+.neobiochina.com'
   - '+.neoease.com'
   - '+.neoease.org'
+  - '+.neofaith.net'
   - '+.neofussvr.sslcs.cdngc.net'
   - '+.neojos.com'
   - '+.neolee.com'
@@ -40566,6 +40606,7 @@ payload:
   - '+.niiceda.com'
   - '+.niiwoo.com'
   - '+.nikanpian.com'
+  - '+.nikebiji.com'
   - '+.nikest.com'
   - '+.nikkisoft.com'
   - '+.nikkiup2u2.com'
@@ -40891,6 +40932,7 @@ payload:
   - '+.novastargame.net'
   - '+.novel-supertv.com'
   - '+.noveless.com'
+  - '+.novell.me'
   - '+.novemideas.com'
   - '+.novtium.com'
   - '+.now-cn.net'
@@ -41220,6 +41262,7 @@ payload:
   - '+.odict.net'
   - '+.odinichina.com'
   - '+.odinjc.com'
+  - '+.odinjilin.com'
   - '+.odinliu.com'
   - '+.oealy.com'
   - '+.oeasy.org'
@@ -41405,6 +41448,7 @@ payload:
   - '+.ompchina.net'
   - '+.omsheji.com'
   - '+.on-sun.com'
+  - '+.onahonyusu.com'
   - '+.onaliyun.com'
   - '+.oncanyin.com'
   - '+.onccc.com'
@@ -41568,6 +41612,7 @@ payload:
   - '+.openxinfo.com'
   - '+.operachina.com'
   - '+.opfibre.com'
+  - '+.opinion.works'
   - '+.opjmw1.ren'
   - '+.oplay.net'
   - '+.oplus.com'
@@ -42678,6 +42723,7 @@ payload:
   - '+.pinshiwen.com'
   - '+.pinshu.com'
   - '+.pinsilianzu1.com'
+  - '+.pinsilianzu3.com'
   - '+.pintour.com'
   - '+.pintu360.com'
   - '+.pintuan.com'
@@ -43329,6 +43375,7 @@ payload:
   - '+.pxb7.com'
   - '+.pxcn168.com'
   - '+.pxemba.com'
+  - '+.pxtop1.com'
   - '+.pxtsc.com'
   - '+.pxtu.com'
   - '+.pxtx.com'
@@ -43655,6 +43702,7 @@ payload:
   - '+.qhrcsc.com'
   - '+.qhres.com'
   - '+.qhres2.com'
+  - '+.qhrmyy.net'
   - '+.qhscw.net'
   - '+.qhserver.com'
   - '+.qhsetup.com'
@@ -43696,6 +43744,7 @@ payload:
   - '+.qiandw.com'
   - '+.qianfan123.com'
   - '+.qianfan365.com'
+  - '+.qianfanwanmu.com'
   - '+.qianfanyun.com'
   - '+.qiang100.com'
   - '+.qiangchezu.com'
@@ -44129,6 +44178,7 @@ payload:
   - '+.qitian.biz'
   - '+.qitiancom.com'
   - '+.qitoon.com'
+  - '+.qitxt.com'
   - '+.qiu-ai.com'
   - '+.qiubiaoqing.com'
   - '+.qiucinews.com'
@@ -44602,6 +44652,7 @@ payload:
   - '+.quanjing.com'
   - '+.quanjingke.com'
   - '+.quanke8.com'
+  - '+.quankexia.com'
   - '+.quanlaoda.com'
   - '+.quanlaodaonline.com'
   - '+.quanlego.com'
@@ -44945,6 +44996,7 @@ payload:
   - '+.qzclfc.com'
   - '+.qzdigg.com'
   - '+.qzdwz.com'
+  - '+.qzdyyy.com'
   - '+.qzfxyy.com'
   - '+.qzhlkj.net'
   - '+.qzhmzx.com'
@@ -45553,6 +45605,7 @@ payload:
   - '+.rockjitui.com'
   - '+.rockmanlab.net'
   - '+.rockru.com'
+  - '+.rockx.pub'
   - '+.rocky.hk'
   - '+.rockyaero.com'
   - '+.rockyenglish.com'
@@ -46992,6 +47045,7 @@ payload:
   - '+.shangtao.net'
   - '+.shangtao360.com'
   - '+.shangtianapp.com'
+  - '+.shangtianhui.com'
   - '+.shangtongda.com'
   - '+.shanguansoft.com'
   - '+.shangusec.net'
@@ -47628,6 +47682,8 @@ payload:
   - '+.showapk.com'
   - '+.showchina.org'
   - '+.showcome.net'
+  - '+.showcoopda.xyz'
+  - '+.showcoorcb.xyz'
   - '+.showdesk.io'
   - '+.showdoc.cc'
   - '+.showerlee.com'
@@ -47902,6 +47958,7 @@ payload:
   - '+.shuttle.co'
   - '+.shutxt.com'
   - '+.shuwangxing.com'
+  - '+.shuwenxianyun.com'
   - '+.shuwulou.com'
   - '+.shuxiao.wang'
   - '+.shuxinyi.net'
@@ -48508,6 +48565,7 @@ payload:
   - '+.smallpdfer.com'
   - '+.smallxu.me'
   - '+.smallyuan.com'
+  - '+.smallyuzhou.com'
   - '+.smarch.com'
   - '+.smarchit.com'
   - '+.smart-idc.net'
@@ -48930,7 +48988,6 @@ payload:
   - '+.sosorank.com'
   - '+.sososteel.com'
   - '+.sosotec.com'
-  - '+.sosotirp.com'
   - '+.sosowenwen.com'
   - '+.sosoyunpan.com'
   - '+.sosoyy.com'
@@ -51092,6 +51149,7 @@ payload:
   - '+.tg-vision.net'
   - '+.tg0123.com'
   - '+.tg1234.com'
+  - '+.tg138.com'
   - '+.tg72.com'
   - '+.tgbus.com'
   - '+.tgcid.org'
@@ -51842,6 +51900,7 @@ payload:
   - '+.tonitech.com'
   - '+.tonnn.com'
   - '+.tony9410.tk'
+  - '+.tonycrane.cc'
   - '+.tonysfarm.com'
   - '+.toobug.net'
   - '+.toocle.com'
@@ -52041,7 +52100,9 @@ payload:
   - '+.tplogincn.com'
   - '+.tpooo.com'
   - '+.tpoxiaozhan.com'
+  - '+.tpsge.com'
   - '+.tpsxs.com'
+  - '+.tpszw.com'
   - '+.tpturang.com'
   - '+.tpy10.net'
   - '+.tpy100.com'
@@ -52171,6 +52232,7 @@ payload:
   - '+.truesing.com'
   - '+.trufun.net'
   - '+.trusfort.com'
+  - '+.trusple.com'
   - '+.trust-one.com'
   - '+.trust400.com'
   - '+.trustasia.com'
@@ -52214,6 +52276,7 @@ payload:
   - '+.tshiny.com'
   - '+.tshmkj.com'
   - '+.tshtech.com'
+  - '+.tshu.net'
   - '+.tsichuan.com'
   - '+.tsinghua-getinfo.com'
   - '+.tsinghuaic.com'
@@ -54141,6 +54204,7 @@ payload:
   - '+.vrlequ.com'
   - '+.vrmvip.com'
   - '+.vrpowder.com'
+  - '+.vrrw.net'
   - '+.vrsat.com'
   - '+.vrvlink.com'
   - '+.vrvmanager.com'
@@ -54348,6 +54412,7 @@ payload:
   - '+.waimao6.com'
   - '+.waimaolangtz.com'
   - '+.waimaoribao.com'
+  - '+.waimaozhuge.com'
   - '+.waimungfire.com'
   - '+.waiqin365.com'
   - '+.waisir.com'
@@ -54520,6 +54585,7 @@ payload:
   - '+.wangsongxing.com'
   - '+.wangsu.com'
   - '+.wangsucloud.com'
+  - '+.wangt.cc'
   - '+.wangting.net'
   - '+.wangtingrui.com'
   - '+.wangtongtong.com'
@@ -56226,6 +56292,7 @@ payload:
   - '+.womai.com'
   - '+.womaiapp.com'
   - '+.woman91.com'
+  - '+.womei.org'
   - '+.womeime.com'
   - '+.women-heart.com'
   - '+.womenjie.com'
@@ -58856,6 +58923,7 @@ payload:
   - '+.xorpay.com'
   - '+.xoveskincare.com'
   - '+.xox8688.com'
+  - '+.xox8995.com'
   - '+.xox9325.com'
   - '+.xoxknct.com'
   - '+.xoxv.net'
@@ -59928,6 +59996,7 @@ payload:
   - '+.ydh.fun'
   - '+.ydimmi.com'
   - '+.ydjt1166.com'
+  - '+.ydkj2019.com'
   - '+.ydl.com'
   - '+.ydl.wang'
   - '+.ydlbk.com'
@@ -60073,6 +60142,7 @@ payload:
   - '+.yesxun.com'
   - '+.yetianzi.com'
   - '+.yetingjk.com'
+  - '+.yettos.com'
   - '+.yewen.us'
   - '+.yewuyuan.com'
   - '+.yexinggroup.com'
@@ -60323,6 +60393,7 @@ payload:
   - '+.yihong001.com'
   - '+.yihu.com'
   - '+.yihuacomputer.com'
+  - '+.yihuikeji.vip'
   - '+.yihuimg.com'
   - '+.yihun.com'
   - '+.yii-china.com'
@@ -60564,6 +60635,7 @@ payload:
   - '+.yipaogan.com'
   - '+.yiparts.com'
   - '+.yipemail.com'
+  - '+.yipeng888.com'
   - '+.yipihuo.com'
   - '+.yipingmi.vip'
   - '+.yipinhr.com'
@@ -60795,6 +60867,7 @@ payload:
   - '+.yjs-cdn10.com'
   - '+.yjs111.com'
   - '+.yjscloud.com'
+  - '+.yjvps.com'
   - '+.yjwlo.com'
   - '+.yjwujian.com'
   - '+.yjxsoft.com'
@@ -60870,6 +60943,7 @@ payload:
   - '+.ylxk.net'
   - '+.ylxw.net'
   - '+.ylyk.com'
+  - '+.ylzbtech.com'
   - '+.ylzms.com'
   - '+.ym-trans.com'
   - '+.ym1998.com'
@@ -60988,6 +61062,7 @@ payload:
   - '+.ynzczs.com'
   - '+.ynzg.org'
   - '+.ynzp.com'
+  - '+.ynzxpx.com'
   - '+.ynzy-tobacco.com'
   - '+.yo4399.com'
   - '+.yoagoa.com'
@@ -61450,6 +61525,7 @@ payload:
   - '+.yp1151.com'
   - '+.yp900.com'
   - '+.ypank.com'
+  - '+.ypfph.com'
   - '+.ypgyyq.com'
   - '+.yph-shop.com'
   - '+.yphuifu.com'
@@ -62043,6 +62119,7 @@ payload:
   - '+.yunser.com'
   - '+.yunshan.net'
   - '+.yunshangc.com'
+  - '+.yunshangnc.com'
   - '+.yunshanmeicai.com'
   - '+.yunshiketang.xyz'
   - '+.yunshipei.com'
@@ -62312,6 +62389,7 @@ payload:
   - '+.yxyfhgc.com'
   - '+.yxyzjx.com'
   - '+.yxz.me'
+  - '+.yxzd.info'
   - '+.yxzxgy.com'
   - '+.yy-xjy.com'
   - '+.yy.com'
@@ -62357,6 +62435,7 @@ payload:
   - '+.yyhhaa.com'
   - '+.yyhn365.com'
   - '+.yyhomer.com'
+  - '+.yyjxcloud.com'
   - '+.yyjzt.com'
   - '+.yyk100.com'
   - '+.yyk2.com'
@@ -62537,6 +62616,7 @@ payload:
   - '+.zangdiyg.com'
   - '+.zanghaihuatxt.com'
   - '+.zangx.com'
+  - '+.zangyitong.com'
   - '+.zanpic.com'
   - '+.zantainet.com'
   - '+.zanyiba.com'
@@ -62782,6 +62862,7 @@ payload:
   - '+.zfancy.net'
   - '+.zfbhsxg.com'
   - '+.zfboke.com'
+  - '+.zfbzhsq.com'
   - '+.zfcm.net'
   - '+.zfdmkj.com'
   - '+.zff888.com'
@@ -63025,6 +63106,7 @@ payload:
   - '+.zhangdu520.com'
   - '+.zhange8.com'
   - '+.zhangfensir.com'
+  - '+.zhangferry.com'
   - '+.zhanggang.net'
   - '+.zhanggaoyuan.com'
   - '+.zhangge.net'
@@ -63535,6 +63617,7 @@ payload:
   - '+.zhizihuan.com'
   - '+.zhizihuan.net'
   - '+.zhiziyun.com'
+  - '+.zhizugz.com'
   - '+.zhizunbao668.com'
   - '+.zhizunbo.com'
   - '+.zhizundns.com'
@@ -64645,6 +64728,7 @@ payload:
   - '+.zsaxi.com'
   - '+.zsbeike.com'
   - '+.zsbit.com'
+  - '+.zsbsoft.com'
   - '+.zsc.io'
   - '+.zscaishang.com'
   - '+.zsdk.cc'
